--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "استخدم صندوق الرطوبة لتنظيم الرطوبة",
     "same_day": "في نفس اليوم",
     "w_temp_set": "ما هي درجة الحرارة التي يجب ضبطها؟",
-    "asko": "أسكو",
     "eco_meter": "مقياس البيئة",
     "asko_eco_meter_desc": "## هو مؤشر ذكي مفيد لتحديد تأثيرك البيئي بناءً على البرنامج المختار والخيارات الإضافية عندما يتعلق الأمر باستهلاك الطاقة والمياه والمنظفات.",
     "wm86_autodose_desc": "بدلاً من التسبب في مشاكل، دع الغسالة تقيس الجرعة الصحيحة من المنظف. تقيس غسالاتنا ذات نظام الجرعة التلقائية المنظف مقابل حمولة الغسيل ومستوى الأوساخ وعسر الماء ونوع البرنامج ودرجة الحرارة. الجرعة المثالية دائمًا ولا مزيد من الجرعة الزائدة. هنا يمكنك ضبط إعداداتك الافتراضية للجرعة التلقائية.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "الحد الأقصى لعدد الدورات في الدقيقة",
     "CL_CF_CS_connect_to_wifi": "اتبع هذه الخطوات لتوصيل الجهاز بشبكة Wi-Fi. نوصي بتعطيل بيانات الشبكة على هاتفك الذكي.",
     "CL_DV_RF_family_care": "رعاية الأسرة",
-    "CL_DV_RF_family_care_tips": "في الفترات التالية، قد يكون هناك شخص نشط أمام الثلاجة."
+    "CL_DV_RF_family_care_tips": "في الفترات التالية، قد يكون هناك شخص نشط أمام الثلاجة.",
+    "CL_CF_AS_diagnosing": "الجهاز يقوم بالتشخيص الذاتي",
+    "CL_DV_RF_settings_and_support": "الإعدادات والدعم",
+    "CL_DV_RF_durafresh_temperature_tips": "يحافظ نظام التبريد DuraFresh على الطعام طازجًا لفترة أطول. يتم الحفاظ على الفيتامينات والمعادن لفترة أطول، وكذلك النكهة والبنية.",
+    "CL_CF_CO_urgent": "عاجل",
+    "CL_DV_RF_auto_eco_mode": "وضع ECO التلقائي",
+    "CL_DV_RF_auto_eco_desc": "من خلال تنشيط وضع ECO التلقائي، سيتحول جهازك تلقائيًا إلى وضع ECO بعد 3 أيام من عدم النشاط.",
+    "CL_CF_CO_do_not_unpair": "لا تقم بإلغاء الاقتران",
+    "CL_CF_CO_unpair_confirm_tips": "هل أنت متأكد من أنك تريد إلغاء إقران الجهاز؟",
+    "CL_CF_CO_reset_to_default": "إعادة التعيين إلى الوضع الافتراضي",
+    "CL_CF_CO_reset_to_default_tips": "سيتم تعيين كافة الإعدادات إلى قيمها الافتراضية.",
+    "CL_DV_OV_bio24_modes_desc": "تتيح لك أنظمة التسخين المتنوعة في الفرن الحصول على نتائج طهي مثالية. اكتشف طريقة التسخين الأنسب لطبقك.",
+    "CL_DV_OV_heater_systems": "أنظمة التدفئة",
+    "CL_DV_OV_heater_system_desc": "قم باختيار نظام التسخين لرؤية أنظمة الفرن المقابلة له.",
+    "setting_screen_share": "مشاركة الشاشة",
+    "CL_DV_RF_ambient_sensor": "مستشعر المحيط",
+    "CL_DV_RF_ambient_sensor_desc": "سيتم ضبط أضواء الثلاجة تلقائيًا وفقًا لكمية الضوء في الغرفة. عندما يكون مستشعر البيئة نشطًا، فإنه يتجاوز القيم التي تم ضبطها يدويًا.",
+    "CL_DV_RF_brightness_desc": "ضبط سطوع أضواء الثلاجة.",
+    "CL_DV_RF_alarm_sound_setting_tips": "اضبط مستوى صوت التنبيه الخاص بثلاجتك.",
+    "CL_DV_WM_offline_tips": "لا يمكن استخدام بعض الوظائف عندما يكون جهازك غير متصل بالإنترنت. حاول إعادة الاتصال مرة أخرى.",
+    "CL_DV_RF_key_sound_setting_tips": "اضبط مستوى الصوت عند الضغط على مفاتيح الثلاجة.",
+    "CL_DV_DW_odorcontrol_desp": "سيؤدي هذا إلى تمكين/تعطيل برنامج التحكم في الرائحة في قائمة البرامج لديك. يمنع التحكم في الرائحة الرائحة الكريهة من الأطباق المتسخة المتروكة في غسالة الأطباق. عند تمكينه، يتم تنشيط مروحة غسالة الأطباق على فترات منتظمة خلال فترة 72 ساعة. ملاحظة: لتنشيط التحكم في الرائحة، تحتاج إلى تحديد البرنامج من قائمة البرامج. لن يؤدي تمكينه هنا فقط إلى تشغيل التحكم في الرائحة.",
+    "CL_DV_OV_bio24_hot_air_desc": "يتم تسخين الطبق عن طريق الهواء الساخن الذي يتم توفيره من الجزء الخلفي للفرن. تتيح هذه الوظيفة التسخين المتساوي وهي مثالية للخبز على مستوى واحد أو أكثر.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "يتم تسخين الطبق بواسطة نظام التسخين المحسن، بحيث يتم استخدام قدر أقل من الطاقة أثناء العملية. بفضل هذه الوظيفة، يتطلب الطهي بضع دقائق إضافية.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "يتم تسخين الطبق بواسطة عناصر التسخين الموجودة في الجزء العلوي والسفلي من حيز الفرن. هذه الوظيفة مناسبة للخبز والشواء التقليديين. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "يتم تسخين الطبق عن طريق الهواء الساخن الذي يتم توفيره من الجزء الخلفي للفرن. تستخدم هذه الوظيفة التسخين المتساوي وهي مثالية للخبز على مستوى واحد أو أكثر. بفضل نظام التهوية المتخصص، يتم الحفاظ على الهواء جافًا، مما يخلق الظروف المثالية لتحقيق سطح مقرمش مع ضمان الطهي المتساوي في جميع أنحاء الجزء الداخلي.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "يتم تسخين الطبق بواسطة عناصر التسخين الموجودة في الجزء العلوي والسفلي من مساحة الفرن. هذه الوظيفة مثالية للأطباق التي تتطلب المزيد من الحرارة من الأعلى.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "يتم تسخين الطبق بواسطة عناصر التسخين الموجودة في الجزء العلوي والسفلي من مساحة الفرن. هذه الوظيفة مثالية للأطباق التي تتطلب المزيد من الحرارة من الأسفل.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "يتم تسخين الطبق بواسطة عناصر التسخين العلوية والسفلية، مع توزيع الحرارة بالتساوي بواسطة المروحة. لخبز الأطباق بالتساوي على مستوى واحد وتحضير السوفليه.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "يتم تسخين الطبق بالهواء الساخن والحرارة السفلية. مثالي للخبز على مستوى واحد عندما نريد أطباقًا يتم طهيها بسرعة ولها ملمس مقرمش."
 }
