--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Използвайте кутия за влажност, за да регулирате влажността",
     "same_day": "Същия ден",
     "w_temp_set": "Каква температура да се зададе?",
-    "asko": "АСКО",
     "eco_meter": "Екометър",
     "asko_eco_meter_desc": "## е полезен интелигентен индикатор за определяне на вашето въздействие върху околната среда въз основа на избрана програма и допълнителни опции, когато става въпрос за консумация на енергия, вода и перилен препарат.",
     "wm86_autodose_desc": "Вместо да се борите, оставете пералната машина да измерва точно правилната доза перилен препарат. Нашите перални машини със система за автоматично дозиране измерват перилния препарат спрямо пране, ниво на замърсяване, твърдост на водата, тип програма и температура. Винаги перфектна дозировка и без повече предозиране. Тук можете да коригирате настройките си по подразбиране за автоматична доза.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Максимални обороти",
     "CL_CF_CS_connect_to_wifi": "Следвайте тези стъпки, за да свържете устройството към Wi-Fi. Препоръчваме да деактивирате мрежовите данни на вашия смартфон.",
     "CL_DV_RF_family_care": "Семейни грижи",
-    "CL_DV_RF_family_care_tips": "В следващите периоди някой може да е активен пред хладилника."
+    "CL_DV_RF_family_care_tips": "В следващите периоди някой може да е активен пред хладилника.",
+    "CL_CF_AS_diagnosing": "Уредът се самодиагностицира",
+    "CL_DV_RF_settings_and_support": "Настройки и поддръжка",
+    "CL_DV_RF_durafresh_temperature_tips": "Хладилната система DuraFresh запазва храната свежа за по-дълго време. Витамините и минералите се запазват по-дълго, както и вкусът и структурата.",
+    "CL_CF_CO_urgent": "Спешно",
+    "CL_DV_RF_auto_eco_mode": "Автоматичен ECO режим",
+    "CL_DV_RF_auto_eco_desc": "Чрез активиране на автоматичен ECO режим вашето устройство автоматично ще превключи на ECO режим след 3 дни бездействие.",
+    "CL_CF_CO_do_not_unpair": "Не раздвоявайте",
+    "CL_CF_CO_unpair_confirm_tips": "Сигурни ли сте, че искате да прекратите сдвояването на устройството?",
+    "CL_CF_CO_reset_to_default": "Възстановяване по подразбиране",
+    "CL_CF_CO_reset_to_default_tips": "Всички настройки ще бъдат зададени на стойностите си по подразбиране.",
+    "CL_DV_OV_bio24_modes_desc": "Различните нагревателни системи във вашата фурна позволяват оптимални резултати при готвене. Разберете кой метод на нагряване е най-подходящ за вашето ястие.",
+    "CL_DV_OV_heater_systems": "Отоплителни системи",
+    "CL_DV_OV_heater_system_desc": "Изберете нагревателната система, за да видите съответните системи на фурната.",
+    "setting_screen_share": "Споделяне на екрана",
+    "CL_DV_RF_ambient_sensor": "Сензор за околната среда",
+    "CL_DV_RF_ambient_sensor_desc": "Светлините на хладилника автоматично ще се регулират спрямо количеството светлина в стаята. Когато сензорът за околната среда е активен, той отменя ръчно зададените стойности.",
+    "CL_DV_RF_brightness_desc": "Задайте яркостта на осветлението на хладилника.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Задайте силата на звука на алармата на вашия хладилник.",
+    "CL_DV_WM_offline_tips": "Някои функции не могат да се използват, когато устройството ви е офлайн. Опитайте да се свържете отново.",
+    "CL_DV_RF_key_sound_setting_tips": "Задайте силата на звука за натискане на бутоните на вашия хладилник.",
+    "CL_DV_DW_odorcontrol_desp": "Това ще активира/деактивира програмата за контрол на миризмите във вашия списък с програми. Контролът на миризмата предотвратява лошата миризма от мръсни съдове, оставени в съдомиялната машина. Когато е активиран, вентилаторът на съдомиялната машина се активира на редовни интервали за период от 72 часа. Забележка: За да активирате контрола на миризмата, трябва да изберете програмата от списъка с програми. Само активирането му тук няма да стартира контрола на миризмите.",
+    "CL_DV_OV_bio24_hot_air_desc": "Ястието се загрява от горещия въздух, подаван от задната част на фурната. Тази функция използва равномерно нагряване и е идеална за печене на едно или няколко нива.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Съдът се загрява от оптимизираната система за отопление, така че по време на процеса се използва по-малко енергия. С тази функция готвенето изисква няколко допълнителни минути.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Съдът се нагрява от нагревателните елементи в горната и долната част на пещното пространство. Тази функция е подходяща за традиционно печене и печене. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Ястието се загрява от горещия въздух, подаван от задната част на фурната. Тази функция използва равномерно нагряване и е идеална за печене на едно или няколко нива. Със специализирана вентилационна система въздухът се поддържа сух, създавайки перфектни условия за постигане на хрупкава външност, като същевременно осигурява равномерно готвене във вътрешността.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Съдът се нагрява от нагревателните елементи в горната и долната част на пещното пространство. Тази функция е идеална за ястия, които изискват повече топлина отгоре.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Съдът се нагрява от нагревателните елементи в горната и долната част на пещното пространство. Тази функция е идеална за ястия, които изискват повече топлина от дъното.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Съдът се нагрява от горния и долния нагревател, като топлината се разпределя равномерно от вентилатора. За равномерно изпичане на ястия на едно ниво и приготвяне на суфлета.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Съдът се загрява с горещ въздух и долна топлина. Идеален за печене на едно ниво, когато искаме ястия, които се приготвят бързо и имат хрупкава текстура."
 }
