--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "K regulaci vlhkosti použijte vlhkostní box",
     "same_day": "V ten samý den",
     "w_temp_set": "Jakou teplotu nastavit?",
-    "asko": "ASKO",
     "eco_meter": "Ekologický měřič",
     "asko_eco_meter_desc": "## je užitečný inteligentní indikátor, který určuje váš dopad na životní prostředí na základě zvoleného programu a dalších možností, pokud jde o spotřebu energie, vody a pracího prostředku.",
     "wm86_autodose_desc": "Místo toho, abyste bojovali, nechte pračku odměřit přesně tu správnou dávku pracího prostředku. Naše pračky se systémem Auto Dose měří prací prostředek podle množství prádla, stupně znečištění, tvrdosti vody, typu programu a teploty. Vždy perfektní dávkování a žádné předávkování. Zde můžete upravit výchozí nastavení pro automatickou dávku.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maximální otáčky",
     "CL_CF_CS_connect_to_wifi": "Pro připojení zařízení k Wi-Fi postupujte podle následujících kroků. Doporučujeme deaktivovat síťová data na vašem smartphonu.",
     "CL_DV_RF_family_care": "Rodinná péče",
-    "CL_DV_RF_family_care_tips": "V následujících obdobích může být někdo aktivní před lednicí."
+    "CL_DV_RF_family_care_tips": "V následujících obdobích může být někdo aktivní před lednicí.",
+    "CL_CF_AS_diagnosing": "Zařízení je samodiagnostické",
+    "CL_DV_RF_settings_and_support": "Nastavení a podpora",
+    "CL_DV_RF_durafresh_temperature_tips": "Chladicí systém DuraFresh udrží potraviny déle čerstvé. Vitamíny a minerály jsou zachovány déle, stejně jako chuť a struktura.",
+    "CL_CF_CO_urgent": "Naléhavé",
+    "CL_DV_RF_auto_eco_mode": "Auto ECO režim",
+    "CL_DV_RF_auto_eco_desc": "Aktivací automatického režimu ECO se vaše zařízení automaticky přepne do režimu ECO po 3 dnech nečinnosti.",
+    "CL_CF_CO_do_not_unpair": "Neodstraňujte párování",
+    "CL_CF_CO_unpair_confirm_tips": "Jste si jisti, že chcete zrušit spárování zařízení?",
+    "CL_CF_CO_reset_to_default": "Obnovit výchozí",
+    "CL_CF_CO_reset_to_default_tips": "Všechna nastavení budou nastavena na výchozí hodnoty.",
+    "CL_DV_OV_bio24_modes_desc": "Různé topné systémy ve vaší troubě umožňují optimální výsledky vaření. Zjistěte, který způsob ohřevu je pro váš pokrm nejvhodnější.",
+    "CL_DV_OV_heater_systems": "Topné systémy",
+    "CL_DV_OV_heater_system_desc": "Vyberte topný systém, abyste viděli jeho odpovídající systémy trouby.",
+    "setting_screen_share": "Sdílení obrazovky",
+    "CL_DV_RF_ambient_sensor": "Senzor okolí",
+    "CL_DV_RF_ambient_sensor_desc": "Světla chladničky se automaticky přizpůsobí množství světla v místnosti. Když je okolní senzor aktivní, přepíše ručně nastavené hodnoty.",
+    "CL_DV_RF_brightness_desc": "Nastavte jas osvětlení chladničky.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Nastavte hlasitost zvuku budíku vaší chladničky.",
+    "CL_DV_WM_offline_tips": "Některé funkce nelze používat, když je zařízení offline. Zkuste se znovu připojit.",
+    "CL_DV_RF_key_sound_setting_tips": "Nastavte hlasitost pro stisknutí tlačítek na vaší lednici.",
+    "CL_DV_DW_odorcontrol_desp": "Tím povolíte/zakážete program pro kontrolu zápachu ve vašem seznamu programů. Regulace zápachu zabraňuje nepříjemnému zápachu ze špinavého nádobí ponechaného v myčce. Při aktivaci se ventilátor myčky aktivuje v pravidelných intervalech po dobu 72 hodin. Poznámka: Chcete-li aktivovat kontrolu zápachu, musíte vybrat program ze seznamu programů. Pouze jeho povolení zde nespustí kontrolu zápachu.",
+    "CL_DV_OV_bio24_hot_air_desc": "Pokrm je ohříván horkým vzduchem přiváděným ze zadní části trouby. Tato funkce využívá rovnoměrného ohřevu a je ideální pro pečení na jedné nebo více úrovních.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Miska je ohřívána optimalizovaným systémem ohřevu, takže se během procesu spotřebuje méně energie. S touto funkcí vyžaduje vaření několik minut navíc.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Pokrm je ohříván topnými tělesy v horní a spodní části prostoru trouby. Tato funkce je vhodná pro tradiční pečení a zapékání. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Pokrm je ohříván horkým vzduchem přiváděným ze zadní části trouby. Tato funkce využívá rovnoměrného ohřevu a je ideální pro pečení na jedné nebo více úrovních. Díky specializovanému ventilačnímu systému je vzduch udržován v suchu, což vytváří dokonalé podmínky pro dosažení křupavého vnějšího povrchu a zároveň zajišťuje rovnoměrné vaření v celém interiéru.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Pokrm je ohříván topnými tělesy v horní a spodní části prostoru trouby. Tato funkce je ideální pro pokrmy, které vyžadují více tepla shora.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Pokrm je ohříván topnými tělesy v horní a spodní části prostoru trouby. Tato funkce je ideální pro nádobí, které vyžaduje více tepla ze dna.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Pokrm je ohříván horním a spodním topným tělesem, přičemž teplo rovnoměrně rozděluje ventilátor. Pro rovnoměrné pečení pokrmů na jedné úrovni a přípravu suflé.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Miska se zahřívá horkým vzduchem a spodním ohřevem. Ideální pro pečení na jedné úrovni, když chceme pokrmy, které jsou rychle uvařené a mají křupavou strukturu."
 }
