--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Brug fugtboks til at regulere fugtigheden",
     "same_day": "Samme dag",
     "w_temp_set": "Hvilken temperatur skal indstilles?",
-    "asko": "ASKO",
     "eco_meter": "Økomåler",
     "asko_eco_meter_desc": "## er en nyttig smart indikator til at bestemme din miljøpåvirkning baseret på det valgte program og ekstra muligheder, når det kommer til energi-, vand- og rengøringsmiddelforbrug.",
     "wm86_autodose_desc": "I stedet for at gøre det til en kamp, ​​lad vaskemaskinen måle præcis den rigtige dosering af vaskemiddel. Vores vaskemaskiner med Auto Dose system måler vaskemidlet mod vaskemængde, snavsniveau, vandhårdhed, programtype og temperatur. Altid perfekt dosering og ikke mere overdosering. Her kan du justere dine standardindstillinger for Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maksimal rpm",
     "CL_CF_CS_connect_to_wifi": "Følg disse trin for at forbinde enheden til Wi-Fi. Vi anbefaler at deaktivere netværksdata på din smartphone.",
     "CL_DV_RF_family_care": "Familiepleje",
-    "CL_DV_RF_family_care_tips": "I de følgende perioder kan der være nogen aktiv foran køleskabet."
+    "CL_DV_RF_family_care_tips": "I de følgende perioder kan der være nogen aktiv foran køleskabet.",
+    "CL_CF_AS_diagnosing": "Enheden er selvdiagnosticerende",
+    "CL_DV_RF_settings_and_support": "Indstillinger og support",
+    "CL_DV_RF_durafresh_temperature_tips": "DuraFresh-kølesystemet holder maden frisk i længere tid. Vitaminerne og mineralerne bevares i længere tid, ligesom smagen og strukturen.",
+    "CL_CF_CO_urgent": "Presserende",
+    "CL_DV_RF_auto_eco_mode": "Auto ECO-tilstand",
+    "CL_DV_RF_auto_eco_desc": "Ved at aktivere Automatisk ECO-tilstand skifter din enhed automatisk til ECO-tilstand efter 3 dages inaktivitet.",
+    "CL_CF_CO_do_not_unpair": "Ophæv ikke parringen",
+    "CL_CF_CO_unpair_confirm_tips": "Er du sikker på, at du vil ophæve parringen?",
+    "CL_CF_CO_reset_to_default": "Nulstil til standard",
+    "CL_CF_CO_reset_to_default_tips": "Alle indstillinger vil blive sat til deres standardværdier.",
+    "CL_DV_OV_bio24_modes_desc": "De forskellige varmesystemer i din ovn giver mulighed for optimale tilberedningsresultater. Find ud af, hvilken opvarmningsmetode der passer bedst til din ret.",
+    "CL_DV_OV_heater_systems": "Varmeanlæg",
+    "CL_DV_OV_heater_system_desc": "Vælg varmesystemet for at se dets tilsvarende ovnsystemer.",
+    "setting_screen_share": "Skærmdeling",
+    "CL_DV_RF_ambient_sensor": "Omgivende sensor",
+    "CL_DV_RF_ambient_sensor_desc": "Køleskabets lys vil automatisk tilpasse sig mængden af ​​lys i rummet. Når den omgivende sensor er aktiv, tilsidesætter den de manuelt indstillede værdier.",
+    "CL_DV_RF_brightness_desc": "Indstil lysstyrken på køleskabets lys.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Indstil lydstyrken for alarmlyden i dit køleskab.",
+    "CL_DV_WM_offline_tips": "Nogle funktioner kan ikke bruges, når din enhed er offline. Prøv at oprette forbindelse igen.",
+    "CL_DV_RF_key_sound_setting_tips": "Indstil lydstyrken for tryk på tasterne på dit køleskab.",
+    "CL_DV_DW_odorcontrol_desp": "Dette vil aktivere/deaktivere lugtkontrolprogrammet på din programliste. Lugtkontrol forhindrer dårlig lugt fra snavset service, der efterlades i opvaskemaskinen. Når den er aktiveret, aktiveres opvaskemaskinens blæser med regelmæssige intervaller i en periode på 72 timer. Bemærk: For at aktivere lugtkontrol skal du vælge programmet fra programlisten. Kun aktivering her vil ikke køre lugtkontrol.",
+    "CL_DV_OV_bio24_hot_air_desc": "Fadet opvarmes af den varme luft, der tilføres fra bagsiden af ​​ovnen. Denne funktion gør brug af jævn varme og er ideel til bagning på et eller flere niveauer.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Retten opvarmes af det optimerede varmesystem, som bruger mindre strøm. Ved brug af denne funktion skal tilberedningstiden øges med et par minutter.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Retten opvarmes af det øverste og nederste varmelegeme. Denne funktion er velegnet til traditionel bagning og stegning.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Fadet opvarmes af den varme luft, der tilføres fra bagsiden af ​​ovnen. Denne funktion gør brug af jævn varme og er ideel til bagning på et eller flere niveauer. Med et specialiseret ventilationssystem holdes luften tør, hvilket skaber de perfekte betingelser for at opnå et sprødt ydre og samtidig sikre en jævn madlavning i hele interiøret.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Retten opvarmes af det øverste og nederste varmelegeme. Denne funktion er ideel til retter, der kræver mere overvarme.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Retten opvarmes af det øverste og nederste varmelegeme. Denne funktion er ideel til retter, der kræver mere undervarme.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Retten opvarmes af det øverste og nederste varmelegeme, og varmen fordeles jævnt af blæseren. Til jævn bagning af retter på ét niveau og tilberedning af souffléer.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Retten opvarmes med varmluft og undervarme. Ideel til bagning på ét niveau af retter, der tilberedes hurtigt og har en sprød konsistens."
 }
