--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Χρησιμοποιήστε το κουτί υγρασίας για να ρυθμίσετε την υγρασία",
     "same_day": "Την ίδια μέρα",
     "w_temp_set": "Ποια θερμοκρασία να ρυθμιστεί?",
-    "asko": "ΑΣΚΟ",
     "eco_meter": "Οικολογικός μετρητής",
     "asko_eco_meter_desc": "Το ## είναι ένας χρήσιμος έξυπνος δείκτης για τον προσδιορισμό των περιβαλλοντικών σας επιπτώσεων με βάση το επιλεγμένο πρόγραμμα και τις πρόσθετες επιλογές όσον αφορά την κατανάλωση ενέργειας, νερού και απορρυπαντικού.",
     "wm86_autodose_desc": "Αντί να παλεύετε, αφήστε το πλυντήριο να μετρήσει ακριβώς τη σωστή δόση απορρυπαντικού. Τα πλυντήρια μας με σύστημα Auto Dose μετρούν το απορρυπαντικό σε σχέση με το φορτίο πλύσης, το επίπεδο βρωμιάς, τη σκληρότητα του νερού, τον τύπο προγράμματος και τη θερμοκρασία. Πάντα τέλεια δοσολογία και όχι άλλη υπερδοσολογία. Εδώ μπορείτε να προσαρμόσετε τις προεπιλεγμένες ρυθμίσεις σας για την Αυτόματη δόση.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Μέγιστες στροφές ανά λεπτό",
     "CL_CF_CS_connect_to_wifi": "Ακολουθήστε αυτά τα βήματα για να συνδέσετε τη συσκευή στο Wi-Fi. Συνιστούμε να απενεργοποιήσετε τα δεδομένα δικτύου στο smartphone σας.",
     "CL_DV_RF_family_care": "Οικογενειακή Φροντίδα",
-    "CL_DV_RF_family_care_tips": "Τις επόμενες περιόδους, κάποιος μπορεί να είναι ενεργός μπροστά στο ψυγείο."
+    "CL_DV_RF_family_care_tips": "Τις επόμενες περιόδους, κάποιος μπορεί να είναι ενεργός μπροστά στο ψυγείο.",
+    "CL_CF_AS_diagnosing": "Η συσκευή είναι αυτοδιάγνωση",
+    "CL_DV_RF_settings_and_support": "Ρυθμίσεις και υποστήριξη",
+    "CL_DV_RF_durafresh_temperature_tips": "Το σύστημα ψύξης DuraFresh διατηρεί τα τρόφιμα φρέσκα για μεγαλύτερο χρονικό διάστημα. Οι βιταμίνες και τα μέταλλα διατηρούνται για μεγαλύτερο χρονικό διάστημα, όπως και η γεύση και η δομή.",
+    "CL_CF_CO_urgent": "Επείγων",
+    "CL_DV_RF_auto_eco_mode": "Αυτόματη λειτουργία ECO",
+    "CL_DV_RF_auto_eco_desc": "Με την ενεργοποίηση της αυτόματης λειτουργίας ECO, η συσκευή σας θα μεταβεί αυτόματα στη λειτουργία ECO μετά από 3 ημέρες αδράνειας.",
+    "CL_CF_CO_do_not_unpair": "Μην αποσυνδέετε το ζεύγος",
+    "CL_CF_CO_unpair_confirm_tips": "Είστε σίγουροι ότι θέλετε να καταργήσετε την αντιστοίχιση της συσκευής",
+    "CL_CF_CO_reset_to_default": "Επαναφορά στην προεπιλογή",
+    "CL_CF_CO_reset_to_default_tips": "Όλες οι ρυθμίσεις θα οριστούν στις προεπιλεγμένες τιμές τους.",
+    "CL_DV_OV_bio24_modes_desc": "Τα διάφορα συστήματα θέρμανσης στο φούρνο σας επιτρέπουν βέλτιστα αποτελέσματα μαγειρέματος. Μάθετε ποια μέθοδος θέρμανσης είναι η καταλληλότερη για το πιάτο σας.",
+    "CL_DV_OV_heater_systems": "Συστήματα θέρμανσης",
+    "CL_DV_OV_heater_system_desc": "Επιλέξτε το σύστημα θέρμανσης για να δείτε τα αντίστοιχα συστήματα φούρνου.",
+    "setting_screen_share": "Κοινή χρήση οθόνης",
+    "CL_DV_RF_ambient_sensor": "Αισθητήρας περιβάλλοντος",
+    "CL_DV_RF_ambient_sensor_desc": "Τα φώτα του ψυγείου θα προσαρμοστούν αυτόματα στην ποσότητα φωτός στο δωμάτιο. Όταν ο αισθητήρας περιβάλλοντος είναι ενεργός, παρακάμπτει τις τιμές που έχουν οριστεί χειροκίνητα.",
+    "CL_DV_RF_brightness_desc": "Ρυθμίστε τη φωτεινότητα των φώτων του ψυγείου.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Ρυθμίστε την ένταση του ήχου αφύπνισης του ψυγείου σας.",
+    "CL_DV_WM_offline_tips": "Ορισμένες λειτουργίες δεν μπορούν να χρησιμοποιηθούν όταν η συσκευή σας είναι εκτός σύνδεσης. Προσπαθήστε να επανασυνδεθείτε ξανά.",
+    "CL_DV_RF_key_sound_setting_tips": "Ρυθμίστε την ένταση για το πάτημα των πλήκτρων στο ψυγείο σας.",
+    "CL_DV_DW_odorcontrol_desp": "Αυτό θα ενεργοποιήσει/απενεργοποιήσει το πρόγραμμα ελέγχου οσμής στη λίστα προγραμμάτων σας. Ο έλεγχος οσμών αποτρέπει την κακοσμία από βρώμικα πιάτα που έχουν μείνει στο πλυντήριο πιάτων. Όταν είναι ενεργοποιημένος, ο ανεμιστήρας του πλυντηρίου πιάτων ενεργοποιείται σε τακτά χρονικά διαστήματα για περίοδο 72 ωρών. Σημείωση: Για να ενεργοποιήσετε τον έλεγχο οσμών πρέπει να επιλέξετε το πρόγραμμα από τη λίστα προγραμμάτων. Μόνο η ενεργοποίησή του εδώ δεν θα εκτελέσει έλεγχο οσμών.",
+    "CL_DV_OV_bio24_hot_air_desc": "Το πιάτο θερμαίνεται από τον ζεστό αέρα που παρέχεται από το πίσω μέρος του φούρνου. Αυτή η λειτουργία χρησιμοποιεί ομοιόμορφη θέρμανση και είναι ιδανική για ψήσιμο σε ένα ή πολλαπλά επίπεδα.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Το πιάτο θερμαίνεται από το βελτιστοποιημένο σύστημα θέρμανσης, έτσι ώστε να χρησιμοποιείται λιγότερη ενέργεια κατά τη διάρκεια της διαδικασίας. Με αυτή τη λειτουργία, το μαγείρεμα απαιτεί μερικά επιπλέον λεπτά.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Το πιάτο θερμαίνεται από τις αντιστάσεις στο πάνω και κάτω μέρος του χώρου του φούρνου. Αυτή η λειτουργία είναι κατάλληλη για παραδοσιακό ψήσιμο και ψήσιμο. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Το πιάτο θερμαίνεται από τον ζεστό αέρα που παρέχεται από το πίσω μέρος του φούρνου. Αυτή η λειτουργία χρησιμοποιεί ομοιόμορφη θέρμανση και είναι ιδανική για ψήσιμο σε ένα ή πολλαπλά επίπεδα. Με ένα εξειδικευμένο σύστημα εξαερισμού, ο αέρας διατηρείται στεγνός, δημιουργώντας τις τέλειες συνθήκες για να επιτύχετε ένα τραγανό εξωτερικό, εξασφαλίζοντας ομοιόμορφο μαγείρεμα σε όλο το εσωτερικό.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Το πιάτο θερμαίνεται από τις αντιστάσεις στο πάνω και κάτω μέρος του χώρου του φούρνου. Αυτή η λειτουργία είναι ιδανική για πιάτα που απαιτούν περισσότερη θερμότητα από την κορυφή.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Το πιάτο θερμαίνεται από τις αντιστάσεις στο πάνω και κάτω μέρος του χώρου του φούρνου. Αυτή η λειτουργία είναι ιδανική για πιάτα που απαιτούν περισσότερη θερμότητα από το κάτω μέρος.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Το πιάτο θερμαίνεται από την επάνω και την κάτω αντίσταση, με τη θερμότητα να κατανέμεται ομοιόμορφα από τον ανεμιστήρα. Για ομοιόμορφο ψήσιμο πιάτων σε ένα επίπεδο και προετοιμασία σουφλέ.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Το πιάτο θερμαίνεται με ζεστό αέρα και θερμότητα πυθμένα. Ιδανικό για ψήσιμο σε ένα επίπεδο όταν θέλουμε πιάτα που ψήνονται γρήγορα και έχουν τραγανή υφή."
 }
