--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Use humidity box to regulate humidity",
     "same_day": "On same day",
     "w_temp_set": "What temperature to set?",
-    "asko": "ASKO",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## is a helpful smart indicator to determinate your environmental impact based on chosen program and extra options when it comes to energy, water and detergent consumption.",
     "wm86_autodose_desc": "Instead of making it to a struggle let the washing machine measure exactly the right dosage of detergent. Our washing machines with Auto Dose system measure the detergent against wash load, dirtiness level, water hardness, program type and temperature. Always perfect dosage and no more overdosing. Here you can adjust your default settings for Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maximum rpm",
     "CL_CF_CS_connect_to_wifi": "Follow these steps to connect your device to the Wi-Fi. We recommend disabling network data on your smartphone.",
     "CL_DV_RF_family_care": "Family Care",
-    "CL_DV_RF_family_care_tips": "At the following periods,someone may be active in front of the refrigerator."
+    "CL_DV_RF_family_care_tips": "At the following periods,someone may be active in front of the refrigerator.",
+    "CL_CF_AS_diagnosing": "The device is self-diagnosing",
+    "CL_DV_RF_settings_and_support": "Settings And Support",
+    "CL_DV_RF_durafresh_temperature_tips": "The DuraFresh refrigeration system keeps food fresh for longer. The vitamins and minerals are preserved for longer, as are the flavour and structure.",
+    "CL_CF_CO_urgent": "Urgent",
+    "CL_DV_RF_auto_eco_mode": "Auto ECO mode",
+    "CL_DV_RF_auto_eco_desc": "By activating Automatic ECO mode, your device will automatically switch to ECO mode after 3 days of inactivity.",
+    "CL_CF_CO_do_not_unpair": "Don’t unpair",
+    "CL_CF_CO_unpair_confirm_tips": "Are you sure you want to unpair your device?",
+    "CL_CF_CO_reset_to_default": "Reset to default",
+    "CL_CF_CO_reset_to_default_tips": "All settings will be set to their default values.",
+    "CL_DV_OV_bio24_modes_desc": "The various heating systems in your oven allow for optimal cooking results. Find out which heating method is best suitable for your dish.",
+    "CL_DV_OV_heater_systems": "Heater systems",
+    "CL_DV_OV_heater_system_desc": "Select the heater system to see its corresponding oven systems.",
+    "setting_screen_share": "Screen Share",
+    "CL_DV_RF_ambient_sensor": "Ambient sensor",
+    "CL_DV_RF_ambient_sensor_desc": "Lights of the refrigerator will automatically adjust to the amount of light in the room. When the ambient sensor is active, it overrides the manually set values.",
+    "CL_DV_RF_brightness_desc": "Set the brightness of the fridge lights.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Set the volume of the alarm sound of your fridge.",
+    "CL_DV_WM_offline_tips": "Some functionalities can’t be used when your device is offline. Try to reconnect again.",
+    "CL_DV_RF_key_sound_setting_tips": "Set the volume for presses of the keys on your fridge.",
+    "CL_DV_DW_odorcontrol_desp": "This will enable/disable odor control program on your program list. Odor control prevents bad odor from dirty dishes left in the dishwasher. When enabled the dishwashers fan is activated at regular intervals during a period of 72 hours. Note: To activate odor control you need to select the program from the program list. Only enabling it here will not run odor control.",
+    "CL_DV_OV_bio24_hot_air_desc": "The dish is heated by the hot air supplied from the rear of the oven. This function makes use of even heating and is ideal for baking on one or multiple levels.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "The dish is heated by the optimised heating system, so that less energy is used during the process. With this function, cooking requires a few extra minutes.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "The dish is heated by the heating elements at the top and bottom of the oven space. This function is suitable for traditional baking and roasting. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "The dish is heated by the hot air supplied from the rear of the oven. This function makes use of even heating and is ideal for baking on one or multiple levels. With a specialized ventilation system, the air is kept dry, creating the perfect conditions for achieving a crispy exterior while ensuring even cooking throughout the interior.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "The dish is heated by the heating elements at the top and bottom of the oven space. This function is ideal for dishes that require more heat from the top.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "The dish is heated by the heating elements at the top and bottom of the oven space. This function is ideal for dishes that require more heat from the bottom.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "The dish is heated by the top and bottom heating elements, with the heat evenly distributed by the fan. For even baking of dishes on one level and preparation of soufflés.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "The dish is heated with hot air and bottom heat. Ideal for single-level baking when we want dishes that are cooked quickly and have a crispy texture."
 }
