--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "از جعبه رطوبت برای تنظیم رطوبت استفاده کنید",
     "same_day": "همان روز",
     "w_temp_set": "چه دمایی تنظیم شود",
-    "asko": "ASKO",
     "eco_meter": "اکو متر",
     "asko_eco_meter_desc": "## یک شاخص هوشمند مفید برای تعیین تأثیرات زیست محیطی شما بر اساس برنامه انتخابی و گزینه های اضافی در مورد مصرف انرژی، آب و مواد شوینده است.",
     "wm86_autodose_desc": "اجازه دهید ماشین لباسشویی به جای اینکه درگیر مبارزه باشد، دوز مناسب مواد شوینده را اندازه گیری کند. ماشین‌های لباسشویی ما با سیستم Auto Dose، مواد شوینده را در برابر بار شستشو، سطح کثیفی، سختی آب، نوع برنامه و دما اندازه‌گیری می‌کنند. همیشه دوز کامل و بدون مصرف بیش از حد. در اینجا می توانید تنظیمات پیش فرض خود را برای دوز خودکار تنظیم کنید.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "حداکثر دور در دقیقه",
     "CL_CF_CS_connect_to_wifi": "برای اتصال دستگاه به وای فای مراحل زیر را دنبال کنید. توصیه می کنیم داده های شبکه را در گوشی هوشمند خود غیرفعال کنید.",
     "CL_DV_RF_family_care": "مراقبت از خانواده",
-    "CL_DV_RF_family_care_tips": "در دوره های بعدی ممکن است شخصی در جلوی یخچال فعال باشد."
+    "CL_DV_RF_family_care_tips": "در دوره های بعدی ممکن است شخصی در جلوی یخچال فعال باشد.",
+    "CL_CF_AS_diagnosing": "دستگاه خود تشخیصی است",
+    "CL_DV_RF_settings_and_support": "تنظیمات و پشتیبانی",
+    "CL_DV_RF_durafresh_temperature_tips": "سیستم تبرید DuraFresh مواد غذایی را برای مدت طولانی تری تازه نگه می دارد. ویتامین ها و مواد معدنی و همچنین طعم و ساختار برای مدت طولانی تری حفظ می شوند.",
+    "CL_CF_CO_urgent": "فوری",
+    "CL_DV_RF_auto_eco_mode": "حالت ECO خودکار",
+    "CL_DV_RF_auto_eco_desc": "با فعال کردن حالت خودکار ECO، دستگاه شما پس از 3 روز عدم فعالیت به طور خودکار به حالت ECO می رود.",
+    "CL_CF_CO_do_not_unpair": "جفت نکنید",
+    "CL_CF_CO_unpair_confirm_tips": "مطمئنید می‌خواهید جفت‌سازی را لغو کنید",
+    "CL_CF_CO_reset_to_default": "به حالت پیش فرض بازنشانی کنید",
+    "CL_CF_CO_reset_to_default_tips": "همه تنظیمات روی مقادیر پیش فرض خود تنظیم خواهند شد.",
+    "CL_DV_OV_bio24_modes_desc": "سیستم های گرمایش مختلف در فر شما به شما امکان می دهد نتایج پخت و پز بهینه را به دست آورید. ببینید کدام روش گرمایش برای ظرف شما مناسب است.",
+    "CL_DV_OV_heater_systems": "سیستم های بخاری",
+    "CL_DV_OV_heater_system_desc": "برای مشاهده سیستم های اجاق گاز مربوطه، سیستم بخاری را انتخاب کنید.",
+    "setting_screen_share": "اشتراک گذاری صفحه نمایش",
+    "CL_DV_RF_ambient_sensor": "سنسور محیطی",
+    "CL_DV_RF_ambient_sensor_desc": "چراغ های یخچال به طور خودکار با میزان نور اتاق تنظیم می شوند. وقتی سنسور محیط فعال است، مقادیر تنظیم شده دستی را لغو می کند.",
+    "CL_DV_RF_brightness_desc": "روشنایی چراغ های یخچال را تنظیم کنید.",
+    "CL_DV_RF_alarm_sound_setting_tips": "میزان صدای زنگ یخچال خود را تنظیم کنید.",
+    "CL_DV_WM_offline_tips": "وقتی دستگاه شما آفلاین است نمی‌توان از برخی از عملکردها استفاده کرد. سعی کنید دوباره وصل شوید.",
+    "CL_DV_RF_key_sound_setting_tips": "صدا را برای فشار دادن کلیدهای یخچال خود تنظیم کنید.",
+    "CL_DV_DW_odorcontrol_desp": "این برنامه کنترل بو را در لیست برنامه شما فعال/غیرفعال می کند. کنترل بو از بوی بد ظروف کثیف مانده در ماشین ظرفشویی جلوگیری می کند. در صورت فعال بودن فن ماشین ظرفشویی در فواصل زمانی معین و در مدت 72 ساعت فعال می شود. توجه: برای فعال کردن کنترل بو باید برنامه را از لیست برنامه انتخاب کنید. فقط فعال کردن آن در اینجا کنترل بو را اجرا نمی کند.",
+    "CL_DV_OV_bio24_hot_air_desc": "ظرف با هوای گرمی که از پشت فر تامین می شود گرم می شود. این عملکرد از گرمایش یکنواخت استفاده می کند و برای پخت در یک یا چند سطح ایده آل است.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "ظرف توسط سیستم گرمایش بهینه شده گرم می شود، به طوری که انرژی کمتری در طول فرآیند مصرف می شود. با این عملکرد، پخت و پز به چند دقیقه اضافی نیاز دارد.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "ظرف توسط عناصر گرمایشی در بالا و پایین فضای فر گرم می شود. این عملکرد برای پخت و برشته کردن سنتی مناسب است. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "ظرف با هوای گرمی که از پشت فر تامین می شود گرم می شود. این عملکرد از گرمایش یکنواخت استفاده می کند و برای پخت در یک یا چند سطح ایده آل است. با یک سیستم تهویه تخصصی، هوا خشک نگه داشته می شود و شرایط عالی برای دستیابی به یک فضای بیرونی ترد ایجاد می کند و در عین حال پخت و پز یکنواخت را در کل فضای داخلی تضمین می کند.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "ظرف توسط عناصر گرمایشی در بالا و پایین فضای فر گرم می شود. این عملکرد برای ظروفی که نیاز به حرارت بیشتری از بالا دارند ایده آل است.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "ظرف توسط عناصر گرمایشی در بالا و پایین فضای فر گرم می شود. این عملکرد برای ظروفی که به حرارت بیشتری از ته نیاز دارند ایده آل است.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "ظرف توسط المنت های حرارتی بالا و پایین گرم می شود و حرارت به طور مساوی توسط فن پخش می شود. برای پخت یکنواخت ظروف در یک سطح و تهیه سوفله.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "ظرف با هوای گرم و حرارت پایین گرم می شود. ایده آل برای پخت یک سطح زمانی که می خواهیم غذاهایی که سریع پخته شوند و بافتی ترد داشته باشند."
 }
