--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Käytä kosteuslaatikkoa kosteuden säätämiseen",
     "same_day": "Samana päivänä",
     "w_temp_set": "Minkä lämpötila asettaa?",
-    "asko": "ASKO",
     "eco_meter": "Eco mittari",
     "asko_eco_meter_desc": "## on hyödyllinen älykäs osoitin, jonka avulla voit määrittää ympäristövaikutuksesi valitun ohjelman ja lisävaihtoehtojen perusteella energian, veden ja pesuaineen kulutuksen osalta.",
     "wm86_autodose_desc": "Sen sijaan, että joutuisit kamppailemaan, anna pesukoneen mitata täsmälleen oikea pesuaineannos. Auto Dose -järjestelmällä varustetut pesukoneemme mittaavat pesuaineen pesumäärän, likaisuuden, veden kovuuden, ohjelmatyypin ja lämpötilan mukaan. Aina täydellinen annostus eikä enää yliannostusta. Täällä voit säätää oletusasetuksiasi automaattiselle annokselle.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Suurin kierrosluku",
     "CL_CF_CS_connect_to_wifi": "Liitä laite Wi-Fi-verkkoon noudattamalla näitä ohjeita. Suosittelemme poistamaan verkkotiedot käytöstä älypuhelimellasi.",
     "CL_DV_RF_family_care": "Perheenhoito",
-    "CL_DV_RF_family_care_tips": "Seuraavina aikoina joku voi olla aktiivinen jääkaapin edessä."
+    "CL_DV_RF_family_care_tips": "Seuraavina aikoina joku voi olla aktiivinen jääkaapin edessä.",
+    "CL_CF_AS_diagnosing": "Laite tekee itsediagnoosin",
+    "CL_DV_RF_settings_and_support": "Asetukset ja tuki",
+    "CL_DV_RF_durafresh_temperature_tips": "DuraFresh-jäähdytysjärjestelmä pitää ruoan tuoreena pidempään. Vitamiinit ja kivennäisaineet säilyvät pidempään, samoin kuin maku ja rakenne.",
+    "CL_CF_CO_urgent": "Kiireellinen",
+    "CL_DV_RF_auto_eco_mode": "Automaattinen ECO-tila",
+    "CL_DV_RF_auto_eco_desc": "Kun otat automaattisen ECO-tilan käyttöön, laitteesi siirtyy automaattisesti ECO-tilaan, kun sitä ei ole käytetty 3 päivään.",
+    "CL_CF_CO_do_not_unpair": "Älä poista parisuhdetta",
+    "CL_CF_CO_unpair_confirm_tips": "Oletko varma, että haluat poistaa laitteen pariliitoksen?",
+    "CL_CF_CO_reset_to_default": "Palauta oletusarvo",
+    "CL_CF_CO_reset_to_default_tips": "Kaikkien asetusten oletusarvot palautetaan.",
+    "CL_DV_OV_bio24_modes_desc": "Uunisi erilaiset lämmitysjärjestelmät mahdollistavat optimaalisen kypsennystuloksen. Selvitä, mikä lämmitystapa sopii parhaiten ruoallesi.",
+    "CL_DV_OV_heater_systems": "Lämmitysjärjestelmät",
+    "CL_DV_OV_heater_system_desc": "Valitse lämmitysjärjestelmä nähdäksesi sen vastaavat uunijärjestelmät.",
+    "setting_screen_share": "Näytön jako",
+    "CL_DV_RF_ambient_sensor": "Valoanturi",
+    "CL_DV_RF_ambient_sensor_desc": "Jääkaapin valot mukautuvat automaattisesti huoneen valon määrään. Kun ympäristön anturi on aktiivinen, se ohittaa manuaalisesti asetetut arvot.",
+    "CL_DV_RF_brightness_desc": "Säädä jääkaapin valojen kirkkaus.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Aseta jääkaapin hälytysäänen voimakkuus.",
+    "CL_DV_WM_offline_tips": "Joitakin toimintoja ei voi käyttää, kun laite on offline-tilassa. Yritä muodostaa yhteys uudelleen.",
+    "CL_DV_RF_key_sound_setting_tips": "Säädä jääkaapin näppäinpainallusten äänenvoimakkuus.",
+    "CL_DV_DW_odorcontrol_desp": "Tämä ottaa käyttöön tai poistaa käytöstä hajuntorjuntaohjelman ohjelmaluettelossasi. Hajunhallinta estää astianpesukoneeseen jätettyjen likaisten astioiden aiheuttaman pahan hajun. Kun käytössä, astianpesukoneen tuuletin aktivoituu säännöllisin väliajoin 72 tunnin ajan. Huomautus: Jos haluat aktivoida hajunhallinnan, sinun on valittava ohjelma ohjelmaluettelosta. Ainoastaan ​​sen ottaminen käyttöön täällä ei suorita hajunhallintaa.",
+    "CL_DV_OV_bio24_hot_air_desc": "Astia lämmitetään uunin takaosasta tulevalla kuumalla ilmalla. Tämä toiminto hyödyntää tasaista lämmitystä ja sopii erinomaisesti yhdellä tai useammalla tasolla leivontaan.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Ruoka paistetaan optimoidulla lämmitysjärjestelmällä energiankulutuksen vähentämiseksi. Tällä toiminnolla kypsennys vaatii muutaman lisäminuutin.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Ruoka paistetaan uunin ylä- ja alaosassa olevilla lämmityselementeillä. Tämä toiminto sopii perinteiseen leivontaan ja paistamiseen.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Astia lämmitetään uunin takaosasta tulevalla kuumalla ilmalla. Tämä toiminto hyödyntää tasaista lämmitystä ja sopii erinomaisesti yhdellä tai useammalla tasolla leivontaan. Erityisen ilmanvaihtojärjestelmän ansiosta ilma pysyy kuivana, mikä luo täydelliset olosuhteet rapealle ulkopinnalle varmistaen samalla tasaisen ruoanlaiton koko sisällä.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Ruoka paistetaan uunin ylä- ja alaosassa olevilla lämmityselementeillä. Tämä toiminto on ihanteellinen ruoille, jotka vaativat enemmän lämpöä ylhäältä.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Ruoka paistetaan uunin ylä- ja alaosassa olevilla lämmityselementeillä. Tämä toiminto on ihanteellinen ruoille, jotka vaativat enemmän lämpöä alhaalta.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Ruoka paistetaan ylä- ja alalämmityselementeillä tuulettimen jakaessa lämmön tasaisesti. Ruokien tasaiseen kypsennykseen yhdellä tasolla ja kohokkaiden valmistukseen.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Ruoka paistetaan kiertoilmalla ja alalämmöllä. Ihanteellinen nopeasti kypsyvien, rapeiden ruokien kypsennykseen yhdellä tasolla."
 }
