--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Utiliser une boîte à humidité pour réguler l'humidité",
     "same_day": "Le même jour",
     "w_temp_set": "Quelle température dois-je régler?",
-    "asko": "ASKO",
     "eco_meter": "Écomètre",
     "asko_eco_meter_desc": "## est un indicateur intelligent utile pour déterminer votre impact environnemental en fonction du programme choisi et des options supplémentaires en matière de consommation d'énergie, d'eau et de détergent.",
     "wm86_autodose_desc": "Au lieu de vous battre pour obtenir le dosage exact de lessive, laissez la machine à laver mesurer le dosage exact de lessive. Nos machines à laver avec système Auto Dose mesurent le dosage de lessive en fonction de la charge de lavage, du degré de saleté, de la dureté de l'eau, du type de programme et de la température. Un dosage toujours parfait et plus de surdosage. Vous pouvez ici ajuster vos paramètres par défaut pour Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Régime maximal",
     "CL_CF_CS_connect_to_wifi": "Suivez ces étapes pour connecter l'appareil au Wi-Fi. Nous vous recommandons de désactiver les données réseau sur votre smartphone.",
     "CL_DV_RF_family_care": "Soins familiaux",
-    "CL_DV_RF_family_care_tips": "Aux périodes suivantes, quelqu'un peut être actif devant le réfrigérateur."
+    "CL_DV_RF_family_care_tips": "Aux périodes suivantes, quelqu'un peut être actif devant le réfrigérateur.",
+    "CL_CF_AS_diagnosing": "L'appareil s'auto-diagnostique",
+    "CL_DV_RF_settings_and_support": "Paramètres et support",
+    "CL_DV_RF_durafresh_temperature_tips": "Le système de réfrigération DuraFresh permet de conserver les aliments frais plus longtemps. Les vitamines et les minéraux sont préservés plus longtemps, tout comme la saveur et la structure.",
+    "CL_CF_CO_urgent": "Urgent",
+    "CL_DV_RF_auto_eco_mode": "Mode ECO automatique",
+    "CL_DV_RF_auto_eco_desc": "En activant le mode ECO automatique, votre appareil passera automatiquement en mode ECO après 3 jours d'inactivité.",
+    "CL_CF_CO_do_not_unpair": "Ne pas dissocier",
+    "CL_CF_CO_unpair_confirm_tips": "Êtes-vous sûr de vouloir désassocier l'appareil ?",
+    "CL_CF_CO_reset_to_default": "Réinitialiser par défaut",
+    "CL_CF_CO_reset_to_default_tips": "Tous les réglages seront définis sur leurs valeurs par défaut.",
+    "CL_DV_OV_bio24_modes_desc": "Les différents systèmes de cuisson de votre four permettent d'obtenir des résultats de cuisson optimaux. Découvrez quel mode de cuisson est le mieux adapté à votre plat.",
+    "CL_DV_OV_heater_systems": "Systèmes de chauffage",
+    "CL_DV_OV_heater_system_desc": "Sélectionnez le système de chauffage pour voir les systèmes de four correspondants.",
+    "setting_screen_share": "Partage d'écran",
+    "CL_DV_RF_ambient_sensor": "Capteur d'ambiance",
+    "CL_DV_RF_ambient_sensor_desc": "L'éclairage du réfrigérateur s'ajuste automatiquement à la quantité de lumière dans la pièce. Lorsque le capteur ambiant est actif, il remplace les valeurs réglées manuellement.",
+    "CL_DV_RF_brightness_desc": "Réglez la luminosité des lumières du réfrigérateur.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Réglez le volume de l'alarme sonore de votre réfrigérateur.",
+    "CL_DV_WM_offline_tips": "Certaines fonctionnalités ne peuvent pas être utilisées lorsque votre appareil est hors ligne. Essayez de vous reconnecter à nouveau.",
+    "CL_DV_RF_key_sound_setting_tips": "Réglez le volume des pressions sur les touches de votre réfrigérateur.",
+    "CL_DV_DW_odorcontrol_desp": "Cela activera/désactivera le programme de contrôle des odeurs sur votre liste de programmes. Le contrôle des odeurs empêche les mauvaises odeurs provenant de la vaisselle sale laissée dans le lave-vaisselle. Lorsqu'il est activé, le ventilateur du lave-vaisselle est activé à intervalles réguliers pendant une période de 72 heures. Remarque : pour activer le contrôle des odeurs, vous devez sélectionner le programme dans la liste des programmes. Le fait de l'activer uniquement ici ne lancera pas le contrôle des odeurs.",
+    "CL_DV_OV_bio24_hot_air_desc": "Le plat est chauffé par l'air chaud provenant de l'arrière du four. Cette fonction permet une répartition homogène de la chaleur et est idéale pour la cuisson sur un ou plusieurs niveaux.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Le plat est chauffé grâce au système de chauffage optimisé, qui consomme moins d'énergie pendant le processus. Avec cette fonction, la cuisson nécessite quelques minutes supplémentaires.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Le plat est chauffé par les éléments chauffants situés en haut et en bas du four. Cette fonction est adaptée à la cuisson et au rôtissage traditionnels.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Le plat est chauffé par l'air chaud fourni par l'arrière du four. Cette fonction permet une cuisson homogène et est idéale pour la cuisson sur un ou plusieurs niveaux. Grâce à un système de ventilation spécialisé, l'air est maintenu sec, créant ainsi les conditions idéales pour obtenir un extérieur croustillant tout en garantissant une cuisson homogène à l'intérieur.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Le plat est chauffé par les résistances situées en haut et en bas du four. Cette fonction est idéale pour les plats qui nécessitent plus de chaleur par le haut.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Le plat est chauffé par les résistances situées en haut et en bas du four. Cette fonction est idéale pour les plats qui nécessitent plus de chaleur par le bas.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Le plat est chauffé par les résistances supérieures et inférieures, la chaleur étant uniformément répartie par le ventilateur. Pour une cuisson homogène des plats sur un seul niveau et la préparation de soufflés.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Le plat est chauffé à l'air chaud et par la sole. Idéal pour la cuisson sur un seul niveau, pour des plats cuits rapidement et avec une texture croustillante."
 }
