--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "आर्द्रता को नियंत्रित करने के लिए आर्द्रता बॉक्स का उपयोग करें",
     "same_day": "उसी दिन",
     "w_temp_set": "कौन सा तापमान सेट करना है?",
-    "asko": "आस्को",
     "eco_meter": "इको मीटर",
     "asko_eco_meter_desc": "## ऊर्जा, पानी और डिटर्जेंट की खपत के मामले में चुने गए कार्यक्रम और अतिरिक्त विकल्पों के आधार पर आपके पर्यावरणीय प्रभाव को निर्धारित करने के लिए एक उपयोगी स्मार्ट संकेतक है।",
     "wm86_autodose_desc": "इसे संघर्ष में डालने के बजाय वॉशिंग मशीन को डिटर्जेंट की सही मात्रा मापने दें। ऑटो डोज़ सिस्टम वाली हमारी वॉशिंग मशीनें वाश लोड, गंदगी के स्तर, पानी की कठोरता, प्रोग्राम के प्रकार और तापमान के अनुसार डिटर्जेंट को मापती हैं। हमेशा सही मात्रा और अब ओवरडोज़ नहीं। यहाँ आप ऑटो डोज़ के लिए अपनी डिफ़ॉल्ट सेटिंग समायोजित कर सकते हैं।",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "अधिकतम आरपीएम",
     "CL_CF_CS_connect_to_wifi": "डिवाइस को वाई-फाई से कनेक्ट करने के लिए इन चरणों का पालन करें। हम आपके स्मार्टफोन पर नेटवर्क डेटा को अक्षम करने की सलाह देते हैं।",
     "CL_DV_RF_family_care": "पारिवारिक देखभाल",
-    "CL_DV_RF_family_care_tips": "निम्नलिखित समय में, कोई व्यक्ति रेफ्रिजरेटर के सामने सक्रिय हो सकता है।"
+    "CL_DV_RF_family_care_tips": "निम्नलिखित समय में, कोई व्यक्ति रेफ्रिजरेटर के सामने सक्रिय हो सकता है।",
+    "CL_CF_AS_diagnosing": "यह उपकरण स्वयं निदान करने वाला है",
+    "CL_DV_RF_settings_and_support": "सेटिंग्स और समर्थन",
+    "CL_DV_RF_durafresh_temperature_tips": "ड्यूराफ्रेश रेफ्रिजरेशन सिस्टम भोजन को लंबे समय तक ताजा रखता है। विटामिन और खनिज लंबे समय तक संरक्षित रहते हैं, साथ ही स्वाद और संरचना भी।",
+    "CL_CF_CO_urgent": "अति आवश्यक",
+    "CL_DV_RF_auto_eco_mode": "ऑटो ईसीओ मोड",
+    "CL_DV_RF_auto_eco_desc": "स्वचालित ECO मोड को सक्रिय करने से, आपकी डिवाइस 3 दिनों की निष्क्रियता के बाद स्वचालित रूप से ECO मोड पर स्विच हो जाएगी।",
+    "CL_CF_CO_do_not_unpair": "अनपेयर न करें",
+    "CL_CF_CO_unpair_confirm_tips": "क्या आप वाकई डिवाइस को अनपेयर करना चाहते हैं?",
+    "CL_CF_CO_reset_to_default": "वितथ पर ले जाएं",
+    "CL_CF_CO_reset_to_default_tips": "सभी सेटिंग्स उनके डिफ़ॉल्ट मानों पर सेट हो जाएंगी।",
+    "CL_DV_OV_bio24_modes_desc": "आपके ओवन में विभिन्न हीटिंग सिस्टम बेहतरीन खाना पकाने के परिणाम देते हैं। पता लगाएँ कि आपके पकवान के लिए कौन सी हीटिंग विधि सबसे उपयुक्त है।",
+    "CL_DV_OV_heater_systems": "हीटर प्रणालियाँ",
+    "CL_DV_OV_heater_system_desc": "हीटर प्रणाली का चयन करके उसके संगत ओवन सिस्टम को देखें।",
+    "setting_screen_share": "स्क्रीन शेयर",
+    "CL_DV_RF_ambient_sensor": "परिवेश सेंसर",
+    "CL_DV_RF_ambient_sensor_desc": "रेफ्रिजरेटर की लाइटें कमरे में रोशनी की मात्रा के अनुसार अपने आप एडजस्ट हो जाएंगी। जब परिवेश सेंसर सक्रिय होता है, तो यह मैन्युअल रूप से सेट किए गए मानों को ओवरराइड कर देता है।",
+    "CL_DV_RF_brightness_desc": "फ्रिज की लाइट की चमक निर्धारित करें।",
+    "CL_DV_RF_alarm_sound_setting_tips": "अपने फ्रिज के अलार्म की ध्वनि का वॉल्यूम सेट करें।",
+    "CL_DV_WM_offline_tips": "जब आपका डिवाइस ऑफ़लाइन हो, तो कुछ कार्यक्षमताओं का उपयोग नहीं किया जा सकता। फिर से कनेक्ट करने का प्रयास करें।",
+    "CL_DV_RF_key_sound_setting_tips": "अपने फ्रिज की कुंजियों को दबाने के लिए वॉल्यूम निर्धारित करें।",
+    "CL_DV_DW_odorcontrol_desp": "यह आपकी प्रोग्राम सूची में गंध नियंत्रण प्रोग्राम को सक्षम/अक्षम करेगा। गंध नियंत्रण डिशवॉशर में छोड़े गए गंदे बर्तनों से आने वाली दुर्गंध को रोकता है। सक्षम होने पर डिशवॉशर का पंखा 72 घंटों की अवधि के दौरान नियमित अंतराल पर सक्रिय होता है। नोट: गंध नियंत्रण को सक्रिय करने के लिए आपको प्रोग्राम सूची से प्रोग्राम का चयन करना होगा। केवल इसे यहाँ सक्षम करने से गंध नियंत्रण नहीं चलेगा।",
+    "CL_DV_OV_bio24_hot_air_desc": "ओवन के पीछे से आपूर्ति की गई गर्म हवा से डिश को गर्म किया जाता है। यह फ़ंक्शन समान हीटिंग का उपयोग करता है और एक या कई स्तरों पर बेकिंग के लिए आदर्श है।",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "डिश को अनुकूलित हीटिंग सिस्टम द्वारा गर्म किया जाता है, ताकि प्रक्रिया के दौरान कम ऊर्जा का उपयोग हो। इस फ़ंक्शन के साथ, खाना पकाने में कुछ अतिरिक्त मिनट लगते हैं।",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "ओवन स्पेस के ऊपर और नीचे हीटिंग तत्वों द्वारा डिश को गर्म किया जाता है। यह फ़ंक्शन पारंपरिक बेकिंग और रोस्टिंग के लिए उपयुक्त है। ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "ओवन के पीछे से आपूर्ति की गई गर्म हवा से डिश को गर्म किया जाता है। यह फ़ंक्शन समान हीटिंग का उपयोग करता है और एक या कई स्तरों पर बेकिंग के लिए आदर्श है। एक विशेष वेंटिलेशन सिस्टम के साथ, हवा को सूखा रखा जाता है, जिससे पूरे इंटीरियर में समान रूप से खाना पकाने को सुनिश्चित करते हुए एक कुरकुरा बाहरी प्राप्त करने के लिए सही स्थिति बनती है।",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "ओवन स्पेस के ऊपर और नीचे हीटिंग एलिमेंट द्वारा डिश को गर्म किया जाता है। यह फ़ंक्शन उन डिश के लिए आदर्श है जिन्हें ऊपर से ज़्यादा गर्मी की ज़रूरत होती है।",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "ओवन स्पेस के ऊपर और नीचे हीटिंग तत्वों द्वारा डिश को गर्म किया जाता है। यह फ़ंक्शन उन व्यंजनों के लिए आदर्श है जिन्हें नीचे से अधिक गर्मी की आवश्यकता होती है।",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "डिश को ऊपर और नीचे के हीटिंग तत्वों द्वारा गर्म किया जाता है, जिसमें पंखे द्वारा गर्मी समान रूप से वितरित की जाती है। एक स्तर पर समान रूप से व्यंजन पकाने और सूफले तैयार करने के लिए।",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "डिश को गर्म हवा और नीचे की गर्मी से गर्म किया जाता है। सिंगल-लेवल बेकिंग के लिए आदर्श जब हम चाहते हैं कि डिश जल्दी पक जाए और उसका टेक्सचर कुरकुरा हो।"
 }
