--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Koristite kutiju za vlažnost za regulaciju vlažnosti",
     "same_day": "Isti dan",
     "w_temp_set": "Koju temperaturu postaviti?",
-    "asko": "ASKO",
     "eco_meter": "Eko mjerač",
     "asko_eco_meter_desc": "## je koristan pametni indikator za određivanje vašeg utjecaja na okoliš na temelju odabranog programa i dodatnih opcija kada je riječ o potrošnji energije, vode i deterdženta.",
     "wm86_autodose_desc": "Olakšajte si i dozvolite perilici da izmjeri točnu dozu deterdženta. Naše perilice rublja sa sustavom automatskoga doziranja deterdžent doziraju prema količini pranja, razini zaprljanosti, tvrdoći vode, vrsti programa i temperaturi. Uvijek savršena doza. Ovdje možete prilagoditi zadane postavke za automatsko doziranje.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maksimalni broj okretaja",
     "CL_CF_CS_connect_to_wifi": "Slijedite ove korake za povezivanje uređaja na Wi-Fi. Preporučujemo da onemogućite mrežne podatke na svom pametnom telefonu.",
     "CL_DV_RF_family_care": "Obiteljska njega",
-    "CL_DV_RF_family_care_tips": "U sljedećim razdobljima netko može biti aktivan ispred hladnjaka."
+    "CL_DV_RF_family_care_tips": "U sljedećim razdobljima netko može biti aktivan ispred hladnjaka.",
+    "CL_CF_AS_diagnosing": "Uređaj se samostalno dijagnosticira",
+    "CL_DV_RF_settings_and_support": "Postavke i podrška",
+    "CL_DV_RF_durafresh_temperature_tips": "Sustav hlađenja DuraFresh čuva hranu dulje svježom. Dulje se čuvaju vitamini i minerali, okus i struktura.",
+    "CL_CF_CO_urgent": "Hitno",
+    "CL_DV_RF_auto_eco_mode": "Auto ECO način rada",
+    "CL_DV_RF_auto_eco_desc": "Aktiviranjem automatskog ECO načina rada, vaš uređaj će se automatski prebaciti na ECO način rada nakon 3 dana neaktivnosti.",
+    "CL_CF_CO_do_not_unpair": "Nemoj raspariti",
+    "CL_CF_CO_unpair_confirm_tips": "Jeste li sigurni da želite poništiti uparivanje uređaja?",
+    "CL_CF_CO_reset_to_default": "Vrati na zadano",
+    "CL_CF_CO_reset_to_default_tips": "Sve postavke bit će postavljene na njihove zadane vrijednosti.",
+    "CL_DV_OV_bio24_modes_desc": "Različiti sustavi grijanja u vašoj pećnici omogućuju optimalne rezultate kuhanja. Saznajte koji je način zagrijavanja najprikladniji za vaše jelo.",
+    "CL_DV_OV_heater_systems": "Sustavi grijača",
+    "CL_DV_OV_heater_system_desc": "Odaberite sustav grijanja kako biste vidjeli odgovarajuće sustave pećnice.",
+    "setting_screen_share": "Dijeljenje zaslona",
+    "CL_DV_RF_ambient_sensor": "Senzor okoline",
+    "CL_DV_RF_ambient_sensor_desc": "Svjetla hladnjaka će se automatski prilagoditi količini svjetla u prostoriji. Kada je senzor okoline aktivan, on poništava ručno postavljene vrijednosti.",
+    "CL_DV_RF_brightness_desc": "Postavite jačinu svjetla hladnjaka.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Postavite glasnoću zvuka alarma vašeg hladnjaka.",
+    "CL_DV_WM_offline_tips": "Neke se funkcije ne mogu koristiti kada je vaš uređaj izvan mreže. Pokušajte se ponovno spojiti.",
+    "CL_DV_RF_key_sound_setting_tips": "Postavite glasnoću za pritiske tipki na vašem hladnjaku.",
+    "CL_DV_DW_odorcontrol_desp": "Ovo će omogućiti/onemogućiti program za kontrolu mirisa na vašem popisu programa. Kontrola mirisa sprječava loš miris iz prljavog posuđa ostavljenog u perilici posuđa. Kada je omogućen, ventilator perilice posuđa se uključuje u pravilnim intervalima tijekom razdoblja od 72 sata. Napomena: Za aktiviranje kontrole mirisa potrebno je odabrati program s popisa programa. Omogućavanje samo ovdje neće pokrenuti kontrolu mirisa.",
+    "CL_DV_OV_bio24_hot_air_desc": "Posuda se zagrijava pomoću vrućeg zraka koji dolazi sa stražnje strane pećnice. Ova funkcija koristi ravnomjerno zagrijavanje i idealna je za pečenje na jednoj ili više razina.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Jelo se zagrijava pomoću optimiziranog sustava grijanja, tako da se tijekom postupka troši manje energije. Zahvaljujući ovoj funkciji, za pečenje je potrebno nekoliko dodatnih minuta.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Jelo zagrijavaju gornji i donji grijači u pećnici. Ova je funkcija prikladna za tradicionalno pečenje.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Posuda se zagrijava pomoću vrućeg zraka koji dolazi sa stražnje strane pećnice. Ova funkcija koristi ravnomjerno zagrijavanje i idealna je za pečenje na jednoj ili više razina. Uz specijalizirani ventilacijski sustav, zrak se održava suhim, stvarajući savršene uvjete za postizanje hrskave vanjštine, a istovremeno osigurava ravnomjerno kuhanje u cijeloj unutrašnjosti.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Jelo zagrijavaju gornji i donji grijači u pećnici. Ova je funkcija idealna za jela kojima je potrebno više topline s gornje strane.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Jelo zagrijavaju gornji i donji grijači u pećnici. Ova je funkcija idealna za jela kojima je potrebno više topline s donje strane.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Jelo zagrijavaju gornji i donji grijači, a toplina se ravnomjerno raspoređuje pomoću ventilatora. Za ravnomjerno pečenje jela na jednoj razini i pripremu soufflea.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Jelo se zagrijava vrućim zrakom i donjom toplinom. Idealno za pečenje na jednoj razini kada želimo jela s hrskavom teksturom koja se brzo peku."
 }
