--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Utilizzare la scatola dell'umidità per regolare l'umidità",
     "same_day": "Lo stesso giorno",
     "w_temp_set": "Che temperatura impostare?",
-    "asko": "ASKO",
     "eco_meter": "Ecometro",
     "asko_eco_meter_desc": "## è un utile indicatore intelligente per determinare il tuo impatto ambientale in base al programma scelto e alle opzioni extra in termini di consumo di energia, acqua e detersivo.",
     "wm86_autodose_desc": "Invece di fare fatica, lasciate che la lavatrice misuri esattamente il giusto dosaggio di detersivo. Le nostre lavatrici con sistema Auto Dose misurano il detersivo in base al carico di lavaggio, al livello di sporco, alla durezza dell'acqua, al tipo di programma e alla temperatura. Un dosaggio sempre perfetto e niente più sovradosaggi. Qui è possibile regolare le impostazioni predefinite per il dosaggio automatico.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Giri al minuto massimi",
     "CL_CF_CS_connect_to_wifi": "Segui questi passaggi per connettere il dispositivo al Wi-Fi. Ti consigliamo di disabilitare i dati di rete sul tuo smartphone.",
     "CL_DV_RF_family_care": "Assistenza familiare",
-    "CL_DV_RF_family_care_tips": "Nei seguenti periodi, qualcuno potrebbe essere attivo davanti al frigorifero."
+    "CL_DV_RF_family_care_tips": "Nei seguenti periodi, qualcuno potrebbe essere attivo davanti al frigorifero.",
+    "CL_CF_AS_diagnosing": "Il dispositivo è autodiagnostico",
+    "CL_DV_RF_settings_and_support": "Impostazioni e supporto",
+    "CL_DV_RF_durafresh_temperature_tips": "Il sistema di refrigerazione DuraFresh mantiene il cibo fresco più a lungo. Le vitamine e i minerali vengono conservati più a lungo, così come il sapore e la struttura.",
+    "CL_CF_CO_urgent": "Urgente",
+    "CL_DV_RF_auto_eco_mode": "Modalità ECO automatica",
+    "CL_DV_RF_auto_eco_desc": "Attivando la modalità ECO automatica, il dispositivo passerà automaticamente alla modalità ECO dopo 3 giorni di inattività.",
+    "CL_CF_CO_do_not_unpair": "Non disaccoppiare",
+    "CL_CF_CO_unpair_confirm_tips": "È sicuro di voler disaccoppiare il dispositivo?",
+    "CL_CF_CO_reset_to_default": "Ripristinare le impostazioni predefinite",
+    "CL_CF_CO_reset_to_default_tips": "Tutte le impostazioni verranno ripristinate ai valori predefiniti.",
+    "CL_DV_OV_bio24_modes_desc": "I vari sistemi di riscaldamento nel tuo forno consentono risultati di cottura ottimali. Scopri quale metodo di riscaldamento è più adatto al tuo piatto.",
+    "CL_DV_OV_heater_systems": "Sistemi di riscaldamento",
+    "CL_DV_OV_heater_system_desc": "Selezionare il sistema di riscaldamento per visualizzare i sistemi di forno corrispondenti.",
+    "setting_screen_share": "Condivisione dello schermo",
+    "CL_DV_RF_ambient_sensor": "Sensore ambiente",
+    "CL_DV_RF_ambient_sensor_desc": "Le luci del frigorifero si adatteranno automaticamente alla quantità di luce nella stanza. Quando il sensore ambientale è attivo, ignora i valori impostati manualmente.",
+    "CL_DV_RF_brightness_desc": "Imposta la luminosità delle luci del frigorifero.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Imposta il volume del suono di allarme del tuo frigorifero.",
+    "CL_DV_WM_offline_tips": "Alcune funzionalità non possono essere utilizzate quando il dispositivo è offline. Prova a riconnetterti di nuovo.",
+    "CL_DV_RF_key_sound_setting_tips": "Imposta il volume per la pressione dei tasti del tuo frigorifero.",
+    "CL_DV_DW_odorcontrol_desp": "Questo abiliterà/disabiliterà il programma di controllo degli odori nell'elenco dei programmi. Il controllo degli odori impedisce il cattivo odore dei piatti sporchi lasciati nella lavastoviglie. Quando è abilitato, la ventola della lavastoviglie viene attivata a intervalli regolari per un periodo di 72 ore. Nota: per attivare il controllo degli odori, è necessario selezionare il programma dall'elenco dei programmi. Abilitandolo solo qui, il controllo degli odori non verrà eseguito.",
+    "CL_DV_OV_bio24_hot_air_desc": "Il piatto viene riscaldato dall'aria calda fornita dalla parte posteriore del forno. Questa funzione sfrutta un riscaldamento uniforme ed è ideale per la cottura su uno o più livelli.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Il piatto viene riscaldato dal sistema di riscaldamento ottimizzato, in modo da consumare meno energia durante il processo. Con questa funzione, la cottura richiede qualche minuto in più.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Il piatto viene riscaldato dagli elementi riscaldanti nella parte superiore e inferiore dello spazio del forno. Questa funzione è adatta per la cottura e l'arrosto tradizionali. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Il piatto viene riscaldato dall'aria calda fornita dalla parte posteriore del forno. Questa funzione sfrutta il riscaldamento uniforme ed è ideale per la cottura su uno o più livelli. Con un sistema di ventilazione specializzato, l'aria viene mantenuta asciutta, creando le condizioni perfette per ottenere un esterno croccante e garantendo una cottura uniforme all'interno.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Il piatto viene riscaldato dagli elementi riscaldanti nella parte superiore e inferiore dello spazio del forno. Questa funzione è ideale per i piatti che richiedono più calore dalla parte superiore.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Il piatto viene riscaldato dagli elementi riscaldanti nella parte superiore e inferiore dello spazio del forno. Questa funzione è ideale per i piatti che richiedono più calore dal basso.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Il piatto viene riscaldato dagli elementi riscaldanti superiori e inferiori, con il calore distribuito uniformemente dalla ventola. Per una cottura uniforme dei piatti su un livello e per la preparazione di soufflé.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Il piatto viene riscaldato con aria calda e calore dal basso. Ideale per la cottura su un solo livello quando si desiderano piatti che siano cotti velocemente e abbiano una consistenza croccante."
 }
