--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "湿度調整には湿度ボックスを使用します",
     "same_day": "同日",
     "w_temp_set": "どの温度を設定しますか?",
-    "asko": "アスコ",
     "eco_meter": "エコメーター",
     "asko_eco_meter_desc": "## は、エネルギー、水、洗剤の消費に関して、選択したプログラムと追加オプションに基づいて環境への影響を判断するのに役立つスマートな指標です。",
     "wm86_autodose_desc": "苦労する代わりに、洗濯機に洗剤の正確な適量を測定させましょう。自動投入システムを備えた当社の洗濯機は、洗濯物の量、汚れのレベル、水の硬度、プログラムの種類、温度に応じて洗剤の量を測定します。常に最適な量で、過剰投入はもうありません。ここで、自動投入のデフォルト設定を調整できます。",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "最大回転数",
     "CL_CF_CS_connect_to_wifi": "次の手順で機器がWi-Fi との接続を行ってください。スマホ側のモバイルのデータ通信をオフにすることをお勧めします。",
     "CL_DV_RF_family_care": "家族ケア",
-    "CL_DV_RF_family_care_tips": "以下の時間帯は冷蔵庫の前で誰かが活動している可能性があります。"
+    "CL_DV_RF_family_care_tips": "以下の時間帯は冷蔵庫の前で誰かが活動している可能性があります。",
+    "CL_CF_AS_diagnosing": "デバイスは自己診断機能を備えています",
+    "CL_DV_RF_settings_and_support": "設定とサポート",
+    "CL_DV_RF_durafresh_temperature_tips": "DuraFresh 冷蔵システムは食品をより長く新鮮に保ちます。ビタミンやミネラル、風味や構造がより長く保たれます。",
+    "CL_CF_CO_urgent": "緊急",
+    "CL_DV_RF_auto_eco_mode": "自動ECOモード",
+    "CL_DV_RF_auto_eco_desc": "自動 ECO モードを有効にすると、デバイスは 3 日間操作がないと自動的に ECO モードに切り替わります。",
+    "CL_CF_CO_do_not_unpair": "ペアリングを解除しないでください",
+    "CL_CF_CO_unpair_confirm_tips": "本当にペアリングを解除しますか？",
+    "CL_CF_CO_reset_to_default": "デフォルトにリセット",
+    "CL_CF_CO_reset_to_default_tips": "すべての設定はデフォルト値に設定されます。",
+    "CL_DV_OV_bio24_modes_desc": "オーブンのさまざまな加熱システムにより、最適な調理結果が得られます。どの加熱方法が料理に最適かを調べてください。",
+    "CL_DV_OV_heater_systems": "ヒーターシステム",
+    "CL_DV_OV_heater_system_desc": "ヒーター システムを選択すると、対応するオーブン システムが表示されます。",
+    "setting_screen_share": "画面共有",
+    "CL_DV_RF_ambient_sensor": "周囲光センサー",
+    "CL_DV_RF_ambient_sensor_desc": "冷蔵庫のライトは、室内の明るさに応じて自動的に調整されます。周囲光センサーがアクティブになっている場合は、手動で設定した値が上書きされます。",
+    "CL_DV_RF_brightness_desc": "冷蔵庫のライトの明るさを設定します。",
+    "CL_DV_RF_alarm_sound_setting_tips": "冷蔵庫のアラーム音の音量を設定します。",
+    "CL_DV_WM_offline_tips": "デバイスがオフラインの場合、一部の機能は使用できません。もう一度接続してみてください。",
+    "CL_DV_RF_key_sound_setting_tips": "冷蔵庫のキーを押したときの音量を設定します。",
+    "CL_DV_DW_odorcontrol_desp": "これにより、プログラム リストの臭気制御プログラムを有効/無効にできます。臭気制御により、食器洗い機に残った汚れた食器から発生する悪臭を防止できます。有効にすると、食器洗い機のファンが 72 時間にわたって定期的に作動します。注: 臭気制御を有効にするには、プログラム リストからプログラムを選択する必要があります。ここで有効にしただけでは、臭気制御は実行されません。",
+    "CL_DV_OV_bio24_hot_air_desc": "オーブンの背面から供給される熱風によって料理が加熱されます。この機能は均一な加熱を利用し、1 段または複数段で焼くのに最適です。",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "最適化された加熱システムによって料理が加熱されるため、調理中に使用されるエネルギーが少なくなります。この機能を使用すると、調理に数分余分に時間がかかります。",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "オーブンスペースの上部と下部にある加熱要素によって料理が加熱されます。この機能は、伝統的なベーキングやローストに適しています。 ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "オーブンの背面から供給される熱風によって料理が加熱されます。この機能は均一な加熱を利用し、1 段または複数の段で焼くのに最適です。特殊な換気システムにより、空気は乾燥状態に保たれ、外側はカリッと、内側は均一に調理されるのに理想的な状態になります。",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "オーブンスペースの上部と下部にある加熱要素によって料理が加熱されます。この機能は、上部からの熱をより多く必要とする料理に最適です。",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "オーブンスペースの上部と下部にある加熱要素によって料理が加熱されます。この機能は、下部からの熱をより多く必要とする料理に最適です。",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "皿は上部と下部の加熱要素によって加熱され、熱はファンによって均等に分散されます。1 つのレベルで皿を均等に焼いたり、スフレを調理したりするのに便利です。",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "熱風と底熱で加熱します。サクサクとした食感の料理を早く作りたいとき、一段焼きに最適です。"
 }
