--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Користете кутија за влажност за да ја регулирате влажноста",
     "same_day": "Во истиот ден",
     "w_temp_set": "Која температура треба да се постави?",
-    "asko": "АСКО",
     "eco_meter": "Еко метар",
     "asko_eco_meter_desc": "## е корисен паметен индикатор за одредување на вашето влијание врз животната средина врз основа на избраната програма и дополнителните опции кога станува збор за потрошувачката на енергија, вода и детергент.",
     "wm86_autodose_desc": "Наместо да се борите, оставете машината за перење точно да ја измери вистинската доза на детергент. Нашите машини за перење со систем за автоматска доза го мерат детергентот во однос на оптоварувањето на миењето, нивото на нечистотија, тврдоста на водата, типот на програмата и температурата. Секогаш совршена доза и нема повеќе предозирање. Овде можете да ги приспособите вашите стандардни поставки за автоматска доза.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Максимални вртежи во минута",
     "CL_CF_CS_connect_to_wifi": "Следете ги овие чекори за да го поврзете уредот со Wi-Fi. Препорачуваме да ги оневозможите мрежните податоци на вашиот паметен телефон.",
     "CL_DV_RF_family_care": "Семејна грижа",
-    "CL_DV_RF_family_care_tips": "Во следните периоди, некој може да биде активен пред фрижидерот."
+    "CL_DV_RF_family_care_tips": "Во следните периоди, некој може да биде активен пред фрижидерот.",
+    "CL_CF_AS_diagnosing": "Уредот се самодијагностицира",
+    "CL_DV_RF_settings_and_support": "Поставки и поддршка",
+    "CL_DV_RF_durafresh_temperature_tips": "Системот за ладење DuraFresh ја одржува храната свежа подолго време. Витамините и минералите се чуваат подолго, како и вкусот и структурата.",
+    "CL_CF_CO_urgent": "Итно",
+    "CL_DV_RF_auto_eco_mode": "Автоматски ЕКО режим",
+    "CL_DV_RF_auto_eco_desc": "Со активирање на Automatic ECO режимот, вашиот уред автоматски ќе се префрли на ECO режим по 3 дена неактивност.",
+    "CL_CF_CO_do_not_unpair": "Не распарувајте",
+    "CL_CF_CO_unpair_confirm_tips": "Дали сте сигурни дека сакате да го прекинете спарувањето на уредот?",
+    "CL_CF_CO_reset_to_default": "Ресетирање на стандардно",
+    "CL_CF_CO_reset_to_default_tips": "Сите поставки ќе бидат поставени на нивните стандардни вредности.",
+    "CL_DV_OV_bio24_modes_desc": "Различните системи за греење во вашата рерна овозможуваат оптимални резултати при готвењето. Дознајте кој метод на греење е најдобро погоден за вашето јадење.",
+    "CL_DV_OV_heater_systems": "Системи за грејачи",
+    "CL_DV_OV_heater_system_desc": "Изберете го системот за грејач за да ги видите соодветните системи на печка.",
+    "setting_screen_share": "Споделување на екранот",
+    "CL_DV_RF_ambient_sensor": "Амбиентален сензор",
+    "CL_DV_RF_ambient_sensor_desc": "Светлата на фрижидерот автоматски ќе се приспособат на количината на светлина во просторијата. Кога амбиенталниот сензор е активен, тој ги надминува рачно поставените вредности.",
+    "CL_DV_RF_brightness_desc": "Поставете ја осветленоста на светлата на фрижидерот.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Поставете ја јачината на звукот на алармот на вашиот фрижидер.",
+    "CL_DV_WM_offline_tips": "Некои функционалности не може да се користат кога уредот е офлајн. Обидете се повторно да се поврзете.",
+    "CL_DV_RF_key_sound_setting_tips": "Поставете ја јачината на звукот за притискање на копчињата на вашиот фрижидер.",
+    "CL_DV_DW_odorcontrol_desp": "Ова ќе ја овозможи/оневозможи програмата за контрола на мирис на списокот со програми. Контролата на мирисот го спречува лошиот мирис од валканите садови оставени во машината за миење садови. Кога е овозможено, вентилаторот на машината за миење садови се активира во редовни интервали во период од 72 часа. Забелешка: За да ја активирате контролата на мирисот, треба да ја изберете програмата од списокот со програми. Само што ќе го овозможите овде нема да изврши контрола на мирисот.",
+    "CL_DV_OV_bio24_hot_air_desc": "Садот се загрева со топол воздух што се снабдува од задниот дел на рерната. Оваа функција користи рамномерно загревање и е идеална за печење на едно или повеќе нивоа.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Садот се загрева со оптимизираниот систем за греење, така што се троши помалку енергија во текот на процесот. Со оваа функција, готвењето бара неколку дополнителни минути.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Садот се загрева со грејните елементи на горниот и долниот дел од просторот на рерната. Оваа функција е погодна за традиционално печење и печење. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Садот се загрева со топол воздух што се снабдува од задниот дел на рерната. Оваа функција користи рамномерно загревање и е идеална за печење на едно или повеќе нивоа. Со специјализиран систем за вентилација, воздухот се одржува сув, создавајќи совршени услови за постигнување крцкава надворешност, а истовремено обезбедувајќи рамномерно готвење низ внатрешноста.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Садот се загрева со грејните елементи на горниот и долниот дел од просторот на рерната. Оваа функција е идеална за садови за кои е потребна поголема топлина од врвот.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Садот се загрева со грејните елементи на горниот и долниот дел од просторот на рерната. Оваа функција е идеална за садови за кои е потребна поголема топлина од дното.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Садот се загрева со горните и долните грејни елементи, при што топлината е рамномерно распоредена од вентилаторот. За рамномерно печење јадења на едно ниво и подготовка на суфлеа.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Садот се загрева со топол воздух и топлина на дното. Идеален за печење на едно ниво кога сакаме јадења што се готват брзо и имаат крцкава текстура."
 }
