--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Bruk fuktighetsboks for å regulere fuktigheten",
     "same_day": "På samme dag",
     "w_temp_set": "Hvilken temperatur skal stilles inn?",
-    "asko": "ASKO",
     "eco_meter": "Økomåler",
     "asko_eco_meter_desc": "## er en nyttig smart indikator for å bestemme miljøpåvirkningen din basert på valgt program og ekstra alternativer når det kommer til energi-, vann- og vaskemiddelforbruk.",
     "wm86_autodose_desc": "I stedet for å gjøre det til en kamp, ​​la vaskemaskinen måle nøyaktig riktig dosering av vaskemiddel. Våre vaskemaskiner med Auto Dose-system måler vaskemiddelet mot vaskemengde, smussnivå, vannhardhet, programtype og temperatur. Alltid perfekt dosering og ikke mer overdosering. Her kan du justere standardinnstillingene for Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maks turtall",
     "CL_CF_CS_connect_to_wifi": "Følg disse trinnene for å koble enheten til Wi-Fi. Vi anbefaler å deaktivere nettverksdata på smarttelefonen.",
     "CL_DV_RF_family_care": "Familieomsorg",
-    "CL_DV_RF_family_care_tips": "I de følgende periodene kan noen være aktive foran kjøleskapet."
+    "CL_DV_RF_family_care_tips": "I de følgende periodene kan noen være aktive foran kjøleskapet.",
+    "CL_CF_AS_diagnosing": "Enheten er selvdiagnoserende",
+    "CL_DV_RF_settings_and_support": "Innstillinger og støtte",
+    "CL_DV_RF_durafresh_temperature_tips": "DuraFresh-kjølesystemet holder maten fersk lenger. Vitaminene og mineralene bevares lenger, det samme er smaken og strukturen.",
+    "CL_CF_CO_urgent": "Som haster",
+    "CL_DV_RF_auto_eco_mode": "Auto ECO-modus",
+    "CL_DV_RF_auto_eco_desc": "Ved å aktivere automatisk ECO-modus vil enheten automatisk bytte til ECO-modus etter 3 dager med inaktivitet.",
+    "CL_CF_CO_do_not_unpair": "Ikke koble fra hverandre",
+    "CL_CF_CO_unpair_confirm_tips": "Er du sikker på at du vil oppheve paringen?",
+    "CL_CF_CO_reset_to_default": "Tilbakestill til standard",
+    "CL_CF_CO_reset_to_default_tips": "Alle innstillinger vil bli satt til standardverdiene.",
+    "CL_DV_OV_bio24_modes_desc": "De ulike varmesystemene i ovnen gir optimale tilberedningsresultater. Finn ut hvilken oppvarmingsmetode som passer best for din rett.",
+    "CL_DV_OV_heater_systems": "Varmeanlegg",
+    "CL_DV_OV_heater_system_desc": "Velg varmesystemet for å se dets tilsvarende ovnssystemer.",
+    "setting_screen_share": "Skjermdeling",
+    "CL_DV_RF_ambient_sensor": "Omgivelsessensor",
+    "CL_DV_RF_ambient_sensor_desc": "Lysene i kjøleskapet vil automatisk tilpasse seg mengden lys i rommet. Når omgivelsessensoren er aktiv, overstyrer den de manuelt innstilte verdiene.",
+    "CL_DV_RF_brightness_desc": "Still inn lysstyrken til kjøleskapslysene.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Still inn volumet på alarmlyden til kjøleskapet ditt.",
+    "CL_DV_WM_offline_tips": "Enkelte funksjoner kan ikke brukes når enheten er frakoblet. Prøv å koble til igjen.",
+    "CL_DV_RF_key_sound_setting_tips": "Still inn volumet for å trykke på tastene på kjøleskapet.",
+    "CL_DV_DW_odorcontrol_desp": "Dette vil aktivere/deaktivere luktkontrollprogrammet på programlisten din. Luktkontroll forhindrer dårlig lukt fra skittent oppvask som blir liggende i oppvaskmaskinen. Når den er aktivert, aktiveres oppvaskmaskinens vifte med jevne mellomrom i løpet av 72 timer. Merk: For å aktivere luktkontroll må du velge programmet fra programlisten. Bare å aktivere det her vil ikke kjøre luktkontroll.",
+    "CL_DV_OV_bio24_hot_air_desc": "Retten varmes opp av varmluften som tilføres fra baksiden av ovnen. Denne funksjonen utnytter jevn oppvarming og er ideell for baking på ett eller flere nivåer.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Retten varmes opp av det optimaliserte varmesystemet, slik at det brukes mindre energi under prosessen. Med denne funksjonen krever matlagingen noen ekstra minutter.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Retten varmes opp av varmeelementene øverst og nederst i ovnsrommet. Denne funksjonen er egnet for tradisjonell baking og steking. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Retten varmes opp av den varme luften som tilføres fra baksiden av ovnen. Denne funksjonen utnytter jevn oppvarming og er ideell for baking på ett eller flere nivåer. Med et spesialisert ventilasjonssystem holdes luften tørr, og skaper de perfekte forutsetningene for å oppnå et sprøtt eksteriør samtidig som det sikres jevn matlaging i hele interiøret.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Retten varmes opp av varmeelementene øverst og nederst i ovnsrommet. Denne funksjonen er ideell for retter som krever mer varme fra toppen.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Retten varmes opp av varmeelementene øverst og nederst i ovnsrommet. Denne funksjonen er ideell for retter som krever mer varme fra bunnen.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Retten varmes opp av de øvre og nedre varmeelementene, med varmen jevnt fordelt av viften. For jevn baking av retter på ett plan og tilberedning av suffléer.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Retten varmes opp med varmluft og undervarme. Ideell for baking på ett nivå når vi ønsker retter som tilberedes raskt og har en sprø konsistens."
 }
