--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Gebruik de vochtigheidsbox om de vochtigheid te regelen",
     "same_day": "Op dezelfde dag",
     "w_temp_set": "Welke temperatuur moet ik instellen?",
-    "asko": "ASKO",
     "eco_meter": "Eco-meter",
     "asko_eco_meter_desc": "## is een handige slimme indicator om uw milieu-impact te bepalen op basis van het gekozen programma en extra opties als het gaat om energie-, water- en wasmiddelverbruik.",
     "wm86_autodose_desc": "In plaats van er een strijd van te maken, laat de wasmachine precies de juiste dosering wasmiddel afmeten. Onze wasmachines met Auto Dose-systeem meten het wasmiddel op basis van de waslading, vuilheidsgraad, waterhardheid, programmatype en temperatuur. Altijd de perfecte dosering en geen overdosering meer. Hier kunt u uw standaardinstellingen voor Auto Dose aanpassen.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maximaal toerental",
     "CL_CF_CS_connect_to_wifi": "Volg deze stappen om het apparaat met Wi-Fi te verbinden. We raden aan om netwerkgegevens op uw smartphone uit te schakelen.",
     "CL_DV_RF_family_care": "Gezinszorg",
-    "CL_DV_RF_family_care_tips": "In de volgende perioden kan er iemand actief zijn voor de koelkast."
+    "CL_DV_RF_family_care_tips": "In de volgende perioden kan er iemand actief zijn voor de koelkast.",
+    "CL_CF_AS_diagnosing": "Het apparaat is zelfdiagnostisch",
+    "CL_DV_RF_settings_and_support": "Instellingen en ondersteuning",
+    "CL_DV_RF_durafresh_temperature_tips": "Het DuraFresh koelsysteem houdt voedsel langer vers. De vitaminen en mineralen blijven langer behouden, net als de smaak en structuur.",
+    "CL_CF_CO_urgent": "Dringend",
+    "CL_DV_RF_auto_eco_mode": "Automatische ECO-modus",
+    "CL_DV_RF_auto_eco_desc": "Wanneer u de automatische ECO-modus activeert, schakelt uw apparaat na 3 dagen inactiviteit automatisch over naar de ECO-modus.",
+    "CL_CF_CO_do_not_unpair": "Niet ontkoppelen",
+    "CL_CF_CO_unpair_confirm_tips": "Weet je zeker dat je uit wil loggen?",
+    "CL_CF_CO_reset_to_default": "Resetten naar standaard",
+    "CL_CF_CO_reset_to_default_tips": "Alle instellingen worden gereset naar de standaardwaarden.",
+    "CL_DV_OV_bio24_modes_desc": "De verschillende verwarmingssystemen in uw oven zorgen voor optimale kookresultaten. Ontdek welke verwarmingsmethode het meest geschikt is voor uw gerecht.",
+    "CL_DV_OV_heater_systems": "Verwarmingssystemen",
+    "CL_DV_OV_heater_system_desc": "Selecteer het verwarmingssysteem om de bijbehorende ovensystemen te bekijken.",
+    "setting_screen_share": "Scherm delen",
+    "CL_DV_RF_ambient_sensor": "Omgevingssensor",
+    "CL_DV_RF_ambient_sensor_desc": "De verlichting van de koelkast past zich automatisch aan de hoeveelheid licht in de kamer aan. Wanneer de omgevingssensor actief is, overschrijft deze de handmatig ingestelde waarden.",
+    "CL_DV_RF_brightness_desc": "Stel de helderheid van de koelkastverlichting in.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Stel het volume van het alarmsignaal van uw koelkast in.",
+    "CL_DV_WM_offline_tips": "Sommige functionaliteiten kunnen niet worden gebruikt als uw apparaat offline is. Probeer opnieuw verbinding te maken.",
+    "CL_DV_RF_key_sound_setting_tips": "Stel het volume in voor het indrukken van de toetsen op uw koelkast.",
+    "CL_DV_DW_odorcontrol_desp": "Hiermee wordt het geurbestrijdingsprogramma in uw programmalijst in- of uitgeschakeld. Geurbestrijding voorkomt dat er nare geuren ontstaan door vuile vaat die in de vaatwasser achterblijft. Wanneer ingeschakeld, wordt de ventilator van de vaatwasser met regelmatige tussenpozen geactiveerd gedurende een periode van 72 uur. Let op: om geurbestrijding te activeren, moet u het programma selecteren in de programmalijst. Als u het hier alleen inschakelt, wordt de geurbestrijding niet uitgevoerd.",
+    "CL_DV_OV_bio24_hot_air_desc": "Het gerecht wordt verwarmd door de hete lucht die vanuit de achterkant van de oven wordt aangevoerd. Deze functie maakt gebruik van gelijkmatige verwarming en is ideaal voor het bakken op één of meerdere niveaus.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Het gerecht wordt verwarmd door het geoptimaliseerde verwarmingssysteem, waardoor er minder energie wordt verbruikt tijdens het proces. Met deze functie duurt de bereiding een paar minuten langer.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Het gerecht wordt verwarmd met boven- en onderwarmte. Deze functie is geschikt voor traditioneel bakken en braden.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Het gerecht wordt verwarmd door de hete lucht die vanuit de achterkant van de oven wordt aangevoerd. Deze functie maakt gebruik van gelijkmatige verwarming en is ideaal voor bakken op één of meerdere niveaus. Met een gespecialiseerd ventilatiesysteem wordt de lucht droog gehouden, waardoor de perfecte omstandigheden worden gecreëerd voor een knapperige buitenkant en gelijkmatige bereiding van de binnenkant.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Het gerecht wordt verwarmd door boven- en onderwarmte. Deze functie is ideaal voor gerechten die meer warmte van boven nodig hebben.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Het gerecht wordt verwarmd door boven- en onderwarmte. Deze functie is ideaal voor gerechten die meer warmte van onderaf nodig hebben.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Het gerecht wordt verwarmd door boven- en onderwarmte, waarbij de warmte gelijkmatig wordt verdeeld door de ventilator. Voor het gelijkmatig bakken van gerechten op één niveau en het bereiden van soufflés.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Het gerecht wordt verwarmd met hete lucht en onderwarmte. Ideaal voor bakken op één niveau als gerechten snel gaar moeten zijn en een knapperige textuur moeten krijgen."
 }
