--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Użyj skrzynki nawilżającej, aby regulować wilgotność",
     "same_day": "Tego samego dnia",
     "w_temp_set": "Jaką temperaturę ustawić?",
-    "asko": "ZAPYTAJ",
     "eco_meter": "Licznik ekologiczny",
     "asko_eco_meter_desc": "## to pomocny, inteligentny wskaźnik umożliwiający określenie wpływu na środowisko w oparciu o wybrany program i dodatkowe opcje dotyczące zużycia energii, wody i detergentu.",
     "wm86_autodose_desc": "Zamiast walczyć, pozwól pralce dokładnie odmierzyć odpowiednią dawkę detergentu. Nasze pralki z systemem Auto Dose mierzą detergent w zależności od wsadu prania, poziomu zabrudzenia, twardości wody, rodzaju programu i temperatury. Zawsze idealne dozowanie i koniec z przedawkowaniem. Tutaj możesz dostosować domyślne ustawienia dla Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maksymalne obroty na minutę",
     "CL_CF_CS_connect_to_wifi": "Wykonaj poniższe czynności, aby podłączyć urządzenie do sieci Wi-Fi. Zalecamy wyłączenie danych sieciowych w smartfonie.",
     "CL_DV_RF_family_care": "Opieka rodzinna",
-    "CL_DV_RF_family_care_tips": "W poniższych okresach ktoś może być aktywny przed lodówką."
+    "CL_DV_RF_family_care_tips": "W poniższych okresach ktoś może być aktywny przed lodówką.",
+    "CL_CF_AS_diagnosing": "Urządzenie wykonuje samodiagnostykę",
+    "CL_DV_RF_settings_and_support": "Ustawienia i wsparcie",
+    "CL_DV_RF_durafresh_temperature_tips": "System chłodniczy DuraFresh utrzymuje świeżość żywności na dłużej. Witaminy i minerały są dłużej zachowane, podobnie jak smak i struktura.",
+    "CL_CF_CO_urgent": "Pilny",
+    "CL_DV_RF_auto_eco_mode": "Tryb automatycznego ECO",
+    "CL_DV_RF_auto_eco_desc": "Po aktywowaniu automatycznego trybu ECO urządzenie automatycznie przełączy się w tryb ECO po 3 dniach bezczynności.",
+    "CL_CF_CO_do_not_unpair": "Nie rozłączaj",
+    "CL_CF_CO_unpair_confirm_tips": "Czy na pewno chcesz usunąć sparowane urządzenia?",
+    "CL_CF_CO_reset_to_default": "Przywróć domyślne",
+    "CL_CF_CO_reset_to_default_tips": "Wszystkie ustawienia zostaną przywrócone do wartości domyślnych.",
+    "CL_DV_OV_bio24_modes_desc": "Różne systemy grzewcze w piekarniku pozwalają na optymalne rezultaty gotowania. Dowiedz się, która metoda ogrzewania jest najlepsza dla Twojego dania.",
+    "CL_DV_OV_heater_systems": "Systemy grzewcze",
+    "CL_DV_OV_heater_system_desc": "Wybierz system grzewczy, aby zobaczyć odpowiadające mu systemy piekarników.",
+    "setting_screen_share": "Udostępnij ekran",
+    "CL_DV_RF_ambient_sensor": "Czujnik otoczenia",
+    "CL_DV_RF_ambient_sensor_desc": "Oświetlenie lodówki automatycznie dostosuje się do ilości światła w pomieszczeniu. Gdy czujnik otoczenia jest aktywny, zastępuje on ręcznie ustawione wartości.",
+    "CL_DV_RF_brightness_desc": "Ustaw jasność oświetlenia lodówki.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Ustaw głośność alarmu swojej lodówki.",
+    "CL_DV_WM_offline_tips": "Niektóre funkcje nie mogą być używane, gdy urządzenie jest offline. Spróbuj ponownie się połączyć.",
+    "CL_DV_RF_key_sound_setting_tips": "Ustaw głośność dźwięków generowanych przez naciśnięcie klawiszy na lodówce.",
+    "CL_DV_DW_odorcontrol_desp": "Włączy/wyłączy program kontroli zapachu na liście programów. Kontrola zapachu zapobiega powstawaniu nieprzyjemnego zapachu z brudnych naczyń pozostawionych w zmywarce. Po włączeniu wentylator zmywarki jest aktywowany w regularnych odstępach czasu w okresie 72 godzin. Uwaga: Aby aktywować kontrolę zapachu, należy wybrać program z listy programów. Tylko włączenie go tutaj nie uruchomi kontroli zapachu.",
+    "CL_DV_OV_bio24_hot_air_desc": "Naczynie jest podgrzewane gorącym powietrzem dostarczanym z tyłu piekarnika. Funkcja ta wykorzystuje równomierne ogrzewanie i jest idealna do pieczenia na jednym lub wielu poziomach.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Danie jest podgrzewane przez zoptymalizowany system grzewczy, dzięki czemu w trakcie procesu zużywa się mniej energii. Dzięki tej funkcji gotowanie zajmuje kilka dodatkowych minut.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Naczynie jest podgrzewane przez elementy grzewcze na górze i dole przestrzeni piekarnika. Funkcja ta nadaje się do tradycyjnego pieczenia i smażenia. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Naczynie jest podgrzewane gorącym powietrzem dostarczanym z tyłu piekarnika. Funkcja ta wykorzystuje równomierne ogrzewanie i jest idealna do pieczenia na jednym lub wielu poziomach. Dzięki specjalistycznemu systemowi wentylacji powietrze jest utrzymywane w stanie suchym, co tworzy idealne warunki do uzyskania chrupiącej powierzchni zewnętrznej, zapewniając jednocześnie równomierne pieczenie w całym wnętrzu.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Naczynie jest podgrzewane przez elementy grzewcze na górze i dole przestrzeni piekarnika. Ta funkcja jest idealna do potraw, które wymagają więcej ciepła z góry.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Naczynie jest podgrzewane przez elementy grzewcze u góry i u dołu przestrzeni piekarnika. Ta funkcja jest idealna do potraw, które wymagają więcej ciepła od dołu.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Naczynie jest podgrzewane przez górne i dolne elementy grzewcze, a ciepło jest równomiernie rozprowadzane przez wentylator. Do równomiernego pieczenia potraw na jednym poziomie i przygotowywania sufletów.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Naczynie jest podgrzewane gorącym powietrzem i dolnym grzaniem. Idealne do pieczenia na jednym poziomie, gdy chcemy, aby potrawy były szybko gotowane i miały chrupiącą konsystencję."
 }
