--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Utilizați cutia de umiditate pentru a regla umiditatea",
     "same_day": "În aceeași zi",
     "w_temp_set": "Ce temperatură trebuie setată?",
-    "asko": "ASKO",
     "eco_meter": "Ecometru",
     "asko_eco_meter_desc": "## este un indicator inteligent util pentru a determina impactul asupra mediului pe baza programului ales și a opțiunilor suplimentare când vine vorba de consumul de energie, apă și detergent.",
     "wm86_autodose_desc": "În loc să te lupți, lasă mașina de spălat să măsoare exact doza potrivită de detergent. Mașinile noastre de spălat cu sistem Auto Dose măsoară detergentul în funcție de sarcina de spălare, nivelul de murdărie, duritatea apei, tipul de program și temperatura. Întotdeauna dozare perfectă și nu mai multe supradoze. Aici puteți ajusta setările implicite pentru doza automată.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Rpm maxim",
     "CL_CF_CS_connect_to_wifi": "Urmați acești pași pentru a conecta dispozitivul la Wi-Fi. Vă recomandăm să dezactivați datele de rețea de pe smartphone-ul dvs.",
     "CL_DV_RF_family_care": "Îngrijirea familiei",
-    "CL_DV_RF_family_care_tips": "În următoarele perioade, cineva poate fi activ în fața frigiderului."
+    "CL_DV_RF_family_care_tips": "În următoarele perioade, cineva poate fi activ în fața frigiderului.",
+    "CL_CF_AS_diagnosing": "Aparatul se autodiagnostica",
+    "CL_DV_RF_settings_and_support": "Setări și asistență",
+    "CL_DV_RF_durafresh_temperature_tips": "Sistemul de refrigerare DuraFresh păstrează alimentele proaspete mai mult timp. Vitaminele și mineralele se păstrează mai mult timp, la fel și aroma și structura.",
+    "CL_CF_CO_urgent": "Urgent",
+    "CL_DV_RF_auto_eco_mode": "Modul ECO automat",
+    "CL_DV_RF_auto_eco_desc": "Prin activarea modului ECO automat, dispozitivul va trece automat în modul ECO după 3 zile de inactivitate.",
+    "CL_CF_CO_do_not_unpair": "Nu deconectați",
+    "CL_CF_CO_unpair_confirm_tips": "Sunteți sigur că doriți să dezasociați dispozitivul?",
+    "CL_CF_CO_reset_to_default": "Resetați la valoarea implicită",
+    "CL_CF_CO_reset_to_default_tips": "Toate setările vor fi setate la valorile implicite.",
+    "CL_DV_OV_bio24_modes_desc": "Diferitele sisteme de încălzire din cuptorul dumneavoastră permit rezultate optime de gătit. Aflați ce metodă de încălzire este cea mai potrivită pentru vasul dvs.",
+    "CL_DV_OV_heater_systems": "Sisteme de încălzire",
+    "CL_DV_OV_heater_system_desc": "Selectați sistemul de încălzire pentru a vedea sistemele de cuptor corespunzătoare.",
+    "setting_screen_share": "Partajarea ecranului",
+    "CL_DV_RF_ambient_sensor": "Senzor de mediu",
+    "CL_DV_RF_ambient_sensor_desc": "Luminile frigiderului se vor ajusta automat la cantitatea de lumină din cameră. Când senzorul de mediu este activ, acesta depășește valorile setate manual.",
+    "CL_DV_RF_brightness_desc": "Setați luminozitatea luminilor frigiderului.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Setați volumul sunetului de alarmă al frigiderului dvs.",
+    "CL_DV_WM_offline_tips": "Unele funcționalități nu pot fi utilizate când dispozitivul este offline. Încercați să vă reconectați din nou.",
+    "CL_DV_RF_key_sound_setting_tips": "Setați volumul pentru apăsarea tastelor de pe frigider.",
+    "CL_DV_DW_odorcontrol_desp": "Aceasta va activa/dezactiva programul de control al mirosurilor din lista de programe. Controlul mirosurilor previne mirosul neplăcut de la vasele murdare lăsate în mașina de spălat vase. Când este activat, ventilatorul mașinii de spălat vase este activat la intervale regulate pe o perioadă de 72 de ore. Notă: Pentru a activa controlul mirosurilor, trebuie să selectați programul din lista de programe. Doar activarea aici nu va rula controlul mirosurilor.",
+    "CL_DV_OV_bio24_hot_air_desc": "Vasul este încălzit de aerul cald furnizat din partea din spate a cuptorului. Această funcție folosește încălzirea uniformă și este ideală pentru coacere pe unul sau mai multe niveluri.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Vasul este încălzit de sistemul de încălzire optimizat, astfel încât se utilizează mai puțină energie în timpul procesului. Cu această funcție, gătitul necesită câteva minute în plus.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Vasul este încălzit de elementele de încălzire din partea de sus și de jos a spațiului cuptorului. Această funcție este potrivită pentru coacere și prăjire tradițională. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Vasul este încălzit de aerul fierbinte furnizat din partea din spate a cuptorului. Această funcție folosește încălzirea uniformă și este ideală pentru coacere pe unul sau mai multe niveluri. Cu un sistem de ventilație specializat, aerul este menținut uscat, creând condițiile perfecte pentru a obține un exterior crocant, asigurând în același timp o gătit uniformă în interior.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Vasul este încălzit de elementele de încălzire din partea de sus și de jos a spațiului cuptorului. Această funcție este ideală pentru mâncărurile care necesită mai multă căldură din partea de sus.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Vasul este încălzit de elementele de încălzire din partea de sus și de jos a spațiului cuptorului. Această funcție este ideală pentru vasele care necesită mai multă căldură din partea de jos.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Vasul este încălzit de elementele de încălzire de sus și de jos, cu căldura distribuită uniform de ventilator. Pentru coacerea uniformă a mâncărurilor pe un singur nivel și prepararea sufleurilor.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Vasul este încălzit cu aer cald și căldură de jos. Ideal pentru coacerea pe un singur nivel atunci când dorim mâncăruri care sunt gătite rapid și au o textură crocantă."
 }
