--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Используйте коробку влажности для регулирования влажности.",
     "same_day": "В тот же день",
     "w_temp_set": "Какую температуру установить?",
-    "asko": "АСКО",
     "eco_meter": "Эко метр",
     "asko_eco_meter_desc": "## — это полезный интеллектуальный индикатор, позволяющий определить ваше воздействие на окружающую среду на основе выбранной программы и дополнительных опций, когда речь идет о потреблении энергии, воды и моющих средств.",
     "wm86_autodose_desc": "Вместо того, чтобы доводить дело до борьбы, позвольте стиральной машине точно измерить правильную дозировку моющего средства. Наши стиральные машины с системой Auto Dose измеряют моющее средство в зависимости от загрузки белья, уровня загрязнения, жесткости воды, типа программы и температуры. Всегда идеальная дозировка и больше никаких передозировок. Здесь вы можете настроить параметры по умолчанию для Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Максимальные обороты в минуту",
     "CL_CF_CS_connect_to_wifi": "Следуйте инструкциям, чтобы подключить прибор к сети Wi-Fi. Рекомендуется отключить сетевые данные на смартфоне.",
     "CL_DV_RF_family_care": "Уход за семьей",
-    "CL_DV_RF_family_care_tips": "В следующие периоды кто-то может проявлять активность перед холодильником."
+    "CL_DV_RF_family_care_tips": "В следующие периоды кто-то может проявлять активность перед холодильником.",
+    "CL_CF_AS_diagnosing": "Устройство самодиагностируется.",
+    "CL_DV_RF_settings_and_support": "Настройки и поддержка",
+    "CL_DV_RF_durafresh_temperature_tips": "Система охлаждения DuraFresh сохраняет продукты свежими дольше. Витамины и минералы сохраняются дольше, как и вкус и структура.",
+    "CL_CF_CO_urgent": "Срочный",
+    "CL_DV_RF_auto_eco_mode": "Автоматический режим ECO",
+    "CL_DV_RF_auto_eco_desc": "При активации автоматического режима ECO ваше устройство автоматически перейдет в режим ECO после 3 дней бездействия.",
+    "CL_CF_CO_do_not_unpair": "Не разрывайте пару",
+    "CL_CF_CO_unpair_confirm_tips": "Вы уверены, что хотите отменить сопряжение устройства?",
+    "CL_CF_CO_reset_to_default": "Сбросить до значений по умолчанию",
+    "CL_CF_CO_reset_to_default_tips": "Все настройки будут сброшены к значениям по умолчанию.",
+    "CL_DV_OV_bio24_modes_desc": "Различные системы нагрева в вашей духовке позволяют достичь оптимальных результатов приготовления. Узнайте, какой метод нагрева лучше всего подходит для вашего блюда.",
+    "CL_DV_OV_heater_systems": "Системы отопления",
+    "CL_DV_OV_heater_system_desc": "Выберите систему нагрева, чтобы увидеть соответствующие ей системы духовок.",
+    "setting_screen_share": "Поделиться экраном",
+    "CL_DV_RF_ambient_sensor": "Датчик окружающей среды",
+    "CL_DV_RF_ambient_sensor_desc": "Освещение холодильника автоматически подстраивается под уровень освещенности в комнате. Когда датчик окружающей среды активен, он переопределяет значения, установленные вручную.",
+    "CL_DV_RF_brightness_desc": "Установите яркость освещения холодильника.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Установите громкость сигнала будильника вашего холодильника.",
+    "CL_DV_WM_offline_tips": "Некоторые функции не могут быть использованы, когда ваше устройство находится в автономном режиме. Попробуйте подключиться снова.",
+    "CL_DV_RF_key_sound_setting_tips": "Установите громкость нажатия клавиш на холодильнике.",
+    "CL_DV_DW_odorcontrol_desp": "Это включит/выключит программу контроля запахов в вашем списке программ. Контроль запахов предотвращает появление неприятного запаха от грязной посуды, оставленной в посудомоечной машине. При включении вентилятор посудомоечной машины активируется через регулярные интервалы в течение 72 часов. Примечание: для активации контроля запахов вам необходимо выбрать программу из списка программ. Включение только здесь не запустит контроль запахов.",
+    "CL_DV_OV_bio24_hot_air_desc": "Блюдо нагревается горячим воздухом, подаваемым из задней части духовки. Эта функция использует равномерный нагрев и идеально подходит для выпечки на одном или нескольких уровнях.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Нагрев с помощью оптимизированной системы нагрева, поэтому в процессе приготовления расходуется меньше энергии. В этом режиме приготовление длится на несколько минут дольше.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Нагрев с помощью верхнего и нижнего нагревательных элементов. Этот режим подходит для традиционной выпечки и запекания.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Блюдо нагревается горячим воздухом, подаваемым из задней части духовки. Эта функция использует равномерный нагрев и идеально подходит для выпечки на одном или нескольких уровнях. Благодаря специальной системе вентиляции воздух остается сухим, что создает идеальные условия для получения хрустящей корочки снаружи и обеспечивает равномерное приготовление внутри.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Нагрев с помощью верхнего и нижнего нагревательных элементов. Этот режим подходит для блюд, которым больше необходим нагрев сверху.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Нагрев с помощью верхнего и нижнего нагревательных элементов. Этот режим подходит для блюд, которым больше необходим нагрев снизу.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Нагрев с помощью верхнего и нижнего нагревательных элементов, вентилятор равномерно распределяет тепло. Для равномерного приготовления блюд на одном уровне и приготовления суфле.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Нагрев с помощью горячего воздуха и нижнего нагревательного элемента. Идеально для приготовления на одном уровне, когда нужно быстро приготовить блюдо с хрустящей корочкой."
 }
