--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Na reguláciu vlhkosti použite vlhkostný box",
     "same_day": "V ten istý deň",
     "w_temp_set": "Akú teplotu nastaviť?",
-    "asko": "ASKO",
     "eco_meter": "Eco meter",
     "asko_eco_meter_desc": "## je užitočný inteligentný indikátor na určenie vášho vplyvu na životné prostredie na základe zvoleného programu a doplnkových možností, pokiaľ ide o spotrebu energie, vody a pracieho prostriedku.",
     "wm86_autodose_desc": "Namiesto toho, aby ste museli bojovať, nechajte práčku odmerať presne tú správnu dávku pracieho prostriedku. Naše práčky so systémom Auto Dose merajú prací prostriedok podľa náplne prania, stupňa znečistenia, tvrdosti vody, typu programu a teploty. Vždy dokonalé dávkovanie a už žiadne predávkovanie. Tu môžete upraviť predvolené nastavenia pre automatickú dávku.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maximálne otáčky",
     "CL_CF_CS_connect_to_wifi": "Ak chcete pripojiť zariadenie k sieti Wi-Fi, postupujte podľa týchto krokov. Odporúčame deaktivovať sieťové údaje na vašom smartfóne.",
     "CL_DV_RF_family_care": "Starostlivosť o rodinu",
-    "CL_DV_RF_family_care_tips": "V nasledujúcich obdobiach môže byť niekto aktívny pred chladničkou."
+    "CL_DV_RF_family_care_tips": "V nasledujúcich obdobiach môže byť niekto aktívny pred chladničkou.",
+    "CL_CF_AS_diagnosing": "Zariadenie je samodiagnostické",
+    "CL_DV_RF_settings_and_support": "Nastavenia a podpora",
+    "CL_DV_RF_durafresh_temperature_tips": "Chladiaci systém DuraFresh udrží potraviny dlhšie čerstvé. Vitamíny a minerály sú zachované dlhšie, rovnako ako chuť a štruktúra.",
+    "CL_CF_CO_urgent": "Naliehavé",
+    "CL_DV_RF_auto_eco_mode": "Automatický ECO režim",
+    "CL_DV_RF_auto_eco_desc": "Aktiváciou automatického režimu ECO sa vaše zariadenie automaticky prepne do režimu ECO po 3 dňoch nečinnosti.",
+    "CL_CF_CO_do_not_unpair": "Nerušte párovanie",
+    "CL_CF_CO_unpair_confirm_tips": "Ste si istí, že chcete zrušiť párovanie zariadenia?",
+    "CL_CF_CO_reset_to_default": "Obnoviť predvolené nastavenie",
+    "CL_CF_CO_reset_to_default_tips": "Všetky nastavenia sa nastavia na predvolené hodnoty.",
+    "CL_DV_OV_bio24_modes_desc": "Rôzne vykurovacie systémy vo vašej rúre umožňujú optimálne výsledky pečenia. Zistite, ktorý spôsob ohrevu je pre váš pokrm najvhodnejší.",
+    "CL_DV_OV_heater_systems": "Ohrievacie systémy",
+    "CL_DV_OV_heater_system_desc": "Vyberte systém ohrievača, aby ste videli príslušné systémy rúry.",
+    "setting_screen_share": "Zdieľanie obrazovky",
+    "CL_DV_RF_ambient_sensor": "Senzor okolia",
+    "CL_DV_RF_ambient_sensor_desc": "Svetlá v chladničke sa automaticky prispôsobia množstvu svetla v miestnosti. Keď je aktívny snímač okolia, prepíše manuálne nastavené hodnoty.",
+    "CL_DV_RF_brightness_desc": "Nastavte jas osvetlenia chladničky.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Nastavte hlasitosť zvuku budíka vašej chladničky.",
+    "CL_DV_WM_offline_tips": "Niektoré funkcie nie je možné použiť, keď je vaše zariadenie offline. Skúste sa znova pripojiť.",
+    "CL_DV_RF_key_sound_setting_tips": "Nastavte hlasitosť stlačenia tlačidiel na chladničke.",
+    "CL_DV_DW_odorcontrol_desp": "Toto povolí/zakáže program na kontrolu zápachu vo vašom zozname programov. Regulácia zápachu zabraňuje zápachu zo špinavého riadu ponechaného v umývačke riadu. Keď je aktivovaný, ventilátor umývačky riadu sa aktivuje v pravidelných intervaloch počas 72 hodín. Poznámka: Ak chcete aktivovať kontrolu zápachu, musíte vybrať program zo zoznamu programov. Iba jeho aktivácia tu nespustí kontrolu zápachu.",
+    "CL_DV_OV_bio24_hot_air_desc": "Miska sa ohrieva horúcim vzduchom privádzaným zo zadnej časti rúry. Táto funkcia využíva rovnomerný ohrev a je ideálna na pečenie na jednej alebo viacerých úrovniach.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Miska je ohrievaná optimalizovaným systémom ohrevu, takže sa počas procesu spotrebuje menej energie. Pomocou tejto funkcie si varenie vyžaduje niekoľko minút navyše.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Miska sa ohrieva pomocou vykurovacích telies v hornej a dolnej časti priestoru rúry. Táto funkcia je vhodná na tradičné pečenie a zapekanie. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Miska sa ohrieva horúcim vzduchom privádzaným zo zadnej časti rúry. Táto funkcia využíva rovnomerný ohrev a je ideálna na pečenie na jednej alebo viacerých úrovniach. Vďaka špecializovanému ventilačnému systému je vzduch udržiavaný v suchu, čo vytvára dokonalé podmienky na dosiahnutie chrumkavého exteriéru a zároveň zabezpečuje rovnomerné varenie v celom interiéri.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Miska sa ohrieva pomocou vykurovacích telies v hornej a dolnej časti priestoru rúry. Táto funkcia je ideálna pre pokrmy, ktoré vyžadujú viac tepla zhora.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Miska sa ohrieva pomocou vykurovacích telies v hornej a dolnej časti priestoru rúry. Táto funkcia je ideálna pre riad, ktorý vyžaduje viac tepla zospodu.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Miska sa ohrieva horným a spodným ohrevným telesom, pričom teplo rovnomerne rozdeľuje ventilátor. Na rovnomerné pečenie jedál na jednej úrovni a prípravu suflé.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Miska sa ohrieva horúcim vzduchom a spodným ohrevom. Ideálne na pečenie na jednej úrovni, keď chceme jedlá, ktoré sú rýchlo uvarené a majú chrumkavú štruktúru."
 }
