--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Za uravnavanje vlažnosti uporabite škatlo za vlažnost",
     "same_day": "Isti dan",
     "w_temp_set": "Kakšno temperaturo nastaviti?",
-    "asko": "ASKO",
     "eco_meter": "Eco Meter",
     "asko_eco_meter_desc": "## je koristen pametni indikator za določanje vašega vpliva na okolje na podlagi izbranega programa in dodatnih možnosti, ko gre za porabo energije, vode in detergenta.",
     "wm86_autodose_desc": "Namesto da bi se trudili, pustite pralnemu stroju, da izmeri točno pravi odmerek pralnega sredstva. Naši pralni stroji s sistemom Auto Dose merijo količino pralnega sredstva glede na količino perila, stopnjo umazanosti, trdoto vode, vrsto programa in temperaturo. Vedno popoln odmerek in nič več prevelikega odmerjanja. Tukaj lahko prilagodite privzete nastavitve za funkcijo Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Največji vrtljaji",
     "CL_CF_CS_connect_to_wifi": "Če želite napravo povezati z omrežjem Wi-Fi, sledite naslednjim korakom. Priporočamo, da v pametnem telefonu onemogočite omrežne podatke.",
     "CL_DV_RF_family_care": "Družinska nega",
-    "CL_DV_RF_family_care_tips": "V naslednjih obdobjih je lahko kdo aktiven pred hladilnikom."
+    "CL_DV_RF_family_care_tips": "V naslednjih obdobjih je lahko kdo aktiven pred hladilnikom.",
+    "CL_CF_AS_diagnosing": "Naprava se samodiagnosticira",
+    "CL_DV_RF_settings_and_support": "Nastavitve in podpora",
+    "CL_DV_RF_durafresh_temperature_tips": "Hladilni sistem DuraFresh ohranja hrano svežo dlje časa. Vitamini in minerali se ohranijo dlje časa, prav tako okus in struktura.",
+    "CL_CF_CO_urgent": "Nujno",
+    "CL_DV_RF_auto_eco_mode": "Samodejni način ECO",
+    "CL_DV_RF_auto_eco_desc": "Z aktiviranjem samodejnega načina ECO bo vaša naprava samodejno preklopila v način ECO po 3 dneh nedejavnosti.",
+    "CL_CF_CO_do_not_unpair": "Ne razdruži se",
+    "CL_CF_CO_unpair_confirm_tips": "Ali ste prepričani, da želite odstraniti uparjen aparata?",
+    "CL_CF_CO_reset_to_default": "Ponastavi na privzeto",
+    "CL_CF_CO_reset_to_default_tips": "Vse nastavitve bodo nastavljene na privzete vrednosti.",
+    "CL_DV_OV_bio24_modes_desc": "Različni sistemi gretja v vaši pečici omogočajo optimalne rezultate kuhanja. Ugotovite, kateri način segrevanja je najprimernejši za vašo jed.",
+    "CL_DV_OV_heater_systems": "Grelni sistemi",
+    "CL_DV_OV_heater_system_desc": "Izberite grelni sistem, da si ogledate ustrezne sisteme pečice.",
+    "setting_screen_share": "Skupna raba zaslona",
+    "CL_DV_RF_ambient_sensor": "Senzor okolice",
+    "CL_DV_RF_ambient_sensor_desc": "Luči hladilnika se bodo samodejno prilagodile količini svetlobe v prostoru. Ko je senzor okolice aktiven, preglasi ročno nastavljene vrednosti.",
+    "CL_DV_RF_brightness_desc": "Nastavite svetlost luči hladilnika.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Nastavite glasnost zvoka alarma vašega hladilnika.",
+    "CL_DV_WM_offline_tips": "Nekaterih funkcij ni mogoče uporabiti, ko je naprava brez povezave. Poskusite znova vzpostaviti povezavo.",
+    "CL_DV_RF_key_sound_setting_tips": "Nastavite glasnost za pritiske tipk na vašem hladilniku.",
+    "CL_DV_DW_odorcontrol_desp": "To bo omogočilo/onemogočilo program za nadzor vonjav na vašem seznamu programov. Nadzor vonja preprečuje neprijeten vonj umazane posode, ki ostane v pomivalnem stroju. Ko je omogočen, se ventilator pomivalnega stroja aktivira v rednih intervalih v obdobju 72 ur. Opomba: Za aktiviranje nadzora vonjav morate izbrati program s seznama programov. Če ga omogočite samo tukaj, ne boste zagnali nadzora vonjav.",
+    "CL_DV_OV_bio24_hot_air_desc": "Posodo segreje vroč zrak, ki ga dovaja iz zadnje strani pečice. Ta funkcija uporablja enakomerno segrevanje in je idealna za pečenje na eni ali več ravneh.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Posoda se segreva z optimiziranim ogrevalnim sistemom, tako da se med postopkom porabi manj energije. S to funkcijo kuhanje traja nekaj minut dlje.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Posodo segrevajo grelna telesa na vrhu in na dnu pečice. Ta funkcija je primerna za tradicionalno peko in kuhanje. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Posodo segreje vroč zrak, ki ga dovaja iz zadnje strani pečice. Ta funkcija uporablja enakomerno segrevanje in je idealna za pečenje na eni ali več ravneh. S posebnim prezračevalnim sistemom je zrak suh, kar ustvarja popolne pogoje za doseganje hrustljave zunanjosti, hkrati pa zagotavlja enakomerno kuhanje po vsej notranjosti.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Posoda se segreva z grelnim elementom na vrhu in na dnu pečice. Ta funkcija je idealna za jedi, ki potrebujejo več toplote od zgoraj.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Posoda se segreva z grelnim elementom na vrhu in na dnu pečice. Ta funkcija je idealna za jedi, ki potrebujejo več toplote od spodaj.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Posoda se segreva z zgornjim in spodnjim grelnim elementom, pri čemer toploto enakomerno porazdeli ventilator. Za enakomerno peko jedi na eni ravni in pripravo suflejev.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Posoda se segreva z vročim zrakom in spodnjim grelnim elementom. Idealna izbira za peko na eni ravni, ko želimo jedi, ki so hitro pečene in imajo hrustljavo teksturo."
 }
