--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Använd fuktlåda för att reglera luftfuktig",
     "same_day": "Samma dag",
     "w_temp_set": "Vilken temperatur ska jag ställa in?",
-    "asko": "ASKO",
     "eco_meter": "Ekomätare",
     "asko_eco_meter_desc": "## är en användbar smart indikator för att bestämma din miljöpåverkan baserat på valt program och extra alternativ när det gäller energi-, vatten- och tvättmedelsförbrukning.",
     "wm86_autodose_desc": "Istället för att göra det till en kamp, ​​låt tvättmaskinen mäta exakt rätt dosering av tvättmedel. Våra tvättmaskiner med Auto Dose-system mäter tvättmedlet mot tvättmängd, smutsnivå, vattnets hårdhet, programtyp och temperatur. Alltid perfekt dosering och ingen mer överdosering. Här kan du justera dina standardinställningar för Auto Dose.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Max varvtal",
     "CL_CF_CS_connect_to_wifi": "Följ stegen för att ansluta din enhet till Wi-Fi.",
     "CL_DV_RF_family_care": "Familjevård",
-    "CL_DV_RF_family_care_tips": "Under de följande perioderna kan någon vara aktiv framför kylskåpet."
+    "CL_DV_RF_family_care_tips": "Under de följande perioderna kan någon vara aktiv framför kylskåpet.",
+    "CL_CF_AS_diagnosing": "Enheten är självdiagnoserande",
+    "CL_DV_RF_settings_and_support": "Inställningar och support",
+    "CL_DV_RF_durafresh_temperature_tips": "DuraFresh-kylsystemet håller maten fräsch längre. Vitaminerna och mineralerna bevaras längre, liksom smaken och strukturen.",
+    "CL_CF_CO_urgent": "Brådskande",
+    "CL_DV_RF_auto_eco_mode": "Auto ECO-läge",
+    "CL_DV_RF_auto_eco_desc": "Genom att aktivera automatiskt ECO-läge kommer din enhet automatiskt att växla till ECO-läge efter 3 dagars inaktivitet.",
+    "CL_CF_CO_do_not_unpair": "Ta inte bort paret",
+    "CL_CF_CO_unpair_confirm_tips": "Är du säker på att du vill koppla bort enheten?",
+    "CL_CF_CO_reset_to_default": "Återställ till standard",
+    "CL_CF_CO_reset_to_default_tips": "Alla inställningar återställs till standardvärdena.",
+    "CL_DV_OV_bio24_modes_desc": "De olika värmesystemen i din ugn ger optimala tillagningsresultat. Ta reda på vilken uppvärmningsmetod som är bäst lämpad för din maträtt.",
+    "CL_DV_OV_heater_systems": "Värmesystem",
+    "CL_DV_OV_heater_system_desc": "Välj värmesystem för att se dess motsvarande ugnssystem.",
+    "setting_screen_share": "Skärmdelning",
+    "CL_DV_RF_ambient_sensor": "Omgivningssensor",
+    "CL_DV_RF_ambient_sensor_desc": "Belysningen i kylskåpet kommer automatiskt att anpassa sig till mängden ljus i rummet. När omgivningssensorn är aktiv åsidosätter den de manuellt inställda värdena.",
+    "CL_DV_RF_brightness_desc": "Ställ in ljusstyrkan på kyllamporna.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Ställ in volymen för alarmljudet i ditt kylskåp.",
+    "CL_DV_WM_offline_tips": "Vissa funktioner kan inte användas när din enhet är offline. Försök att ansluta igen.",
+    "CL_DV_RF_key_sound_setting_tips": "Ställ in volymen för att trycka på knapparna på ditt kylskåp.",
+    "CL_DV_DW_odorcontrol_desp": "Detta kommer att aktivera/inaktivera luktkontrollprogram på din programlista. Luktkontroll förhindrar dålig lukt från smutsig disk som lämnas i diskmaskinen. När den är aktiverad aktiveras diskmaskinens fläkt med jämna mellanrum under en period av 72 timmar. Obs: För att aktivera luktkontroll måste du välja programmet från programlistan. Att bara aktivera det här kommer inte att köra luktkontroll.",
+    "CL_DV_OV_bio24_hot_air_desc": "Skålen värms upp av den varma luften som tillförs från baksidan av ugnen. Denna funktion utnyttjar jämn uppvärmning och är idealisk för bakning på en eller flera nivåer.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Rätten värms upp av det optimerade värmesystemet, så att mindre energi går åt under processen. Med denna funktion kräver tillagningen några extra minuter.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Rätten värms upp av värmeelementen längst upp och nere i ugnsutrymmet. Denna funktion är lämplig för traditionell bakning och stekning.",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Skålen värms upp av den varma luften som tillförs från baksidan av ugnen. Denna funktion utnyttjar jämn uppvärmning och är idealisk för bakning på en eller flera nivåer. Med ett specialiserat ventilationssystem hålls luften torr, vilket skapar de perfekta förutsättningarna för att uppnå en krispig exteriör samtidigt som man säkerställer en jämn tillagning i hela interiören.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Rätten värms upp av värmeelementen uppe och nere i ugnsutrymmet. Denna funktion är idealisk för rätter som kräver mer värme från toppen.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Rätten värms upp av värmeelementen längst upp och nere i ugnsutrymmet. Denna funktion är idealisk för rätter som kräver mer värme från botten.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Rätten värms upp av de övre och undre värmeelementen, med värmen jämnt fördelad av fläkten. För jämn bakning av rätter på en nivå och tillagning av suffléer.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Rätten värms med varmluft och undervärme. Perfekt för enplansbakning när vi vill ha rätter som tillagas snabbt och har en krispig konsistens."
 }
