--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "ใช้กล่องความชื้นเพื่อควบคุมความชื้น",
     "same_day": "ในวันเดียวกัน",
     "w_temp_set": "ควรตั้งอุณหภูมิไว้ที่เท่าไร",
-    "asko": "อาสโก",
     "eco_meter": "อีโคมิเตอร์",
     "asko_eco_meter_desc": "## เป็นตัวบ่งชี้อัจฉริยะที่เป็นประโยชน์ในการระบุผลกระทบต่อสิ่งแวดล้อมของคุณตามโปรแกรมที่เลือกและตัวเลือกพิเศษในเรื่องการใช้พลังงาน น้ำ และผงซักฟอก",
     "wm86_autodose_desc": "แทนที่จะต้องดิ้นรน ให้เครื่องซักผ้าวัดปริมาณผงซักฟอกให้ถูกต้อง เครื่องซักผ้าของเรามีระบบวัดปริมาณผงซักฟอกอัตโนมัติ โดยวัดปริมาณผงซักฟอกตามปริมาณผ้าที่ซัก ระดับความสกปรก ความกระด้างของน้ำ ประเภทของโปรแกรม และอุณหภูมิ คำนวณปริมาณผงซักฟอกให้เหมาะสมเสมอและไม่ต้องใส่ผงซักฟอกมากเกินไป คุณสามารถปรับการตั้งค่าเริ่มต้นสำหรับการวัดปริมาณผงซักฟอกอัตโนมัติได้ที่นี่",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "รอบสูงสุด",
     "CL_CF_CS_connect_to_wifi": "ทำตามขั้นตอนเหล่านี้เพื่อเชื่อมต่ออุปกรณ์กับ Wi-Fi เราขอแนะนำให้ปิดการใช้งานข้อมูลเครือข่ายบนสมาร์ทโฟนของคุณ",
     "CL_DV_RF_family_care": "การดูแลครอบครัว",
-    "CL_DV_RF_family_care_tips": "ในช่วงต่อไปนี้อาจจะมีใครทำกิจกรรมอยู่หน้าตู้เย็น"
+    "CL_DV_RF_family_care_tips": "ในช่วงต่อไปนี้อาจจะมีใครทำกิจกรรมอยู่หน้าตู้เย็น",
+    "CL_CF_AS_diagnosing": "อุปกรณ์จะวินิจฉัยตัวเอง",
+    "CL_DV_RF_settings_and_support": "การตั้งค่าและการสนับสนุน",
+    "CL_DV_RF_durafresh_temperature_tips": "ระบบทำความเย็น DuraFresh ช่วยให้อาหารสดได้นานขึ้น วิตามินและแร่ธาตุยังคงอยู่ได้นานขึ้น รวมถึงรสชาติและโครงสร้างด้วย",
+    "CL_CF_CO_urgent": "ด่วน",
+    "CL_DV_RF_auto_eco_mode": "โหมด ECO อัตโนมัติ",
+    "CL_DV_RF_auto_eco_desc": "เมื่อเปิดใช้งานโหมด ECO อัตโนมัติ อุปกรณ์ของคุณจะเปลี่ยนไปที่โหมด ECO โดยอัตโนมัติหลังจากไม่ได้ใช้งานเป็นเวลา 3 วัน",
+    "CL_CF_CO_do_not_unpair": "อย่ายกเลิกการจับคู่",
+    "CL_CF_CO_unpair_confirm_tips": "คุณแน่ใจหรือไม่ว่าต้องการเลิกจับคู่อุปกรณ์",
+    "CL_CF_CO_reset_to_default": "รีเซ็ตเป็นค่าเริ่มต้น",
+    "CL_CF_CO_reset_to_default_tips": "การตั้งค่าทั้งหมดจะถูกตั้งค่าเป็นค่าเริ่มต้น",
+    "CL_DV_OV_bio24_modes_desc": "ระบบทำความร้อนต่างๆ ในเตาอบของคุณช่วยให้ปรุงอาหารได้อร่อยที่สุด ค้นหาวิธีทำความร้อนที่เหมาะกับอาหารของคุณที่สุด",
+    "CL_DV_OV_heater_systems": "ระบบทำความร้อน",
+    "CL_DV_OV_heater_system_desc": "เลือกระบบเครื่องทำความร้อนเพื่อดูระบบเตาอบที่สอดคล้องกัน",
+    "setting_screen_share": "แชร์หน้าจอ",
+    "CL_DV_RF_ambient_sensor": "เซ็นเซอร์รอบข้าง",
+    "CL_DV_RF_ambient_sensor_desc": "ไฟของตู้เย็นจะปรับตามปริมาณแสงในห้องโดยอัตโนมัติ เมื่อเซ็นเซอร์โดยรอบทำงาน เซ็นเซอร์จะปรับค่าที่ตั้งด้วยตนเองใหม่",
+    "CL_DV_RF_brightness_desc": "ตั้งค่าความสว่างของไฟตู้เย็น",
+    "CL_DV_RF_alarm_sound_setting_tips": "ตั้งค่าระดับเสียงปลุกของตู้เย็นของคุณ",
+    "CL_DV_WM_offline_tips": "ไม่สามารถใช้ฟังก์ชันบางอย่างได้หากอุปกรณ์ของคุณออฟไลน์ ลองเชื่อมต่อใหม่อีกครั้ง",
+    "CL_DV_RF_key_sound_setting_tips": "ตั้งค่าระดับเสียงสำหรับการกดปุ่มบนตู้เย็นของคุณ",
+    "CL_DV_DW_odorcontrol_desp": "การดำเนินการนี้จะเปิด/ปิดโปรแกรมควบคุมกลิ่นในรายการโปรแกรมของคุณ การควบคุมกลิ่นจะป้องกันไม่ให้เกิดกลิ่นไม่พึงประสงค์จากจานสกปรกที่ทิ้งไว้ในเครื่องล้างจาน เมื่อเปิดใช้งานแล้ว พัดลมของเครื่องล้างจานจะทำงานเป็นระยะๆ ตลอดระยะเวลา 72 ชั่วโมง หมายเหตุ: หากต้องการเปิดใช้งานการควบคุมกลิ่น คุณต้องเลือกโปรแกรมจากรายการโปรแกรม การเปิดใช้งานที่นี่เท่านั้นจะไม่ทำให้การควบคุมกลิ่นทำงาน",
+    "CL_DV_OV_bio24_hot_air_desc": "จานจะได้รับความร้อนจากลมร้อนที่ส่งมาจากด้านหลังของเตาอบ ฟังก์ชั่นนี้ใช้ความร้อนที่สม่ำเสมอและเหมาะสำหรับการอบแบบชั้นเดียวหรือหลายชั้น",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "จานจะได้รับความร้อนจากระบบทำความร้อนที่ปรับให้เหมาะสม จึงใช้พลังงานน้อยลงระหว่างกระบวนการ ด้วยฟังก์ชันนี้ การปรุงอาหารจะใช้เวลาเพิ่มขึ้นเล็กน้อย",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "จานจะได้รับความร้อนจากองค์ประกอบความร้อนที่ด้านบนและด้านล่างของช่องเตาอบ ฟังก์ชันนี้เหมาะสำหรับการอบและย่างแบบดั้งเดิม ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "จานจะได้รับความร้อนจากลมร้อนที่ส่งมาจากด้านหลังของเตาอบ ฟังก์ชันนี้ใช้ความร้อนที่สม่ำเสมอและเหมาะสำหรับการอบแบบชั้นเดียวหรือหลายชั้น ด้วยระบบระบายอากาศพิเศษ อากาศจึงแห้ง ทำให้ได้สภาพแวดล้อมที่สมบูรณ์แบบสำหรับการอบด้านนอกที่กรอบนอกและยังคงความสุกทั่วถึงภายใน",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "จานจะได้รับความร้อนจากแผ่นทำความร้อนที่ด้านบนและด้านล่างของช่องเตาอบ ฟังก์ชันนี้เหมาะสำหรับจานที่ต้องการความร้อนจากด้านบนมากกว่า",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "จานจะได้รับความร้อนจากองค์ประกอบความร้อนที่ด้านบนและด้านล่างของช่องเตาอบ ฟังก์ชั่นนี้เหมาะสำหรับจานที่ต้องการความร้อนจากด้านล่างมากกว่า",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "จานได้รับความร้อนจากแผ่นทำความร้อนด้านบนและด้านล่าง โดยกระจายความร้อนอย่างสม่ำเสมอด้วยพัดลม เพื่อการอบจานที่สม่ำเสมอในระดับเดียวกันและการเตรียมซูเฟล่",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "จานนี้ใช้ความร้อนจากลมร้อนและความร้อนจากด้านล่าง เหมาะสำหรับการอบแบบชั้นเดียวเมื่อเราต้องการอาหารที่สุกเร็วและมีเนื้อสัมผัสที่กรอบ"
 }
