--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Nemi düzenlemek için nem kutusunu kullanın",
     "same_day": "Aynı gün",
     "w_temp_set": "Hangi sıcaklığı ayarlayacağım?",
-    "asko": "ASKO",
     "eco_meter": "Eko Metre",
     "asko_eco_meter_desc": "##, seçilen programa ve enerji, su ve deterjan tüketimine ilişkin ekstra seçeneklere göre çevresel etkinizi belirlemek için yararlı bir akıllı göstergedir.",
     "wm86_autodose_desc": "Mücadele etmek yerine çamaşır makinesinin deterjanın tam olarak doğru dozajını ölçmesine izin verin. Otomatik Dozaj sistemine sahip çamaşır makinelerimiz deterjanı yıkama yüküne, kirlilik seviyesine, su sertliğine, program türüne ve sıcaklığa göre ölçer. Her zaman mükemmel dozaj ve artık aşırı doz yok. Burada Otomatik Dozaj için varsayılan ayarlarınızı ayarlayabilirsiniz.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Maksimum devir sayısı",
     "CL_CF_CS_connect_to_wifi": "Cihazı Wi-Fi'ye bağlamak için aşağıdaki adımları izleyin. Akıllı telefonunuzdaki ağ verilerini devre dışı bırakmanızı öneririz.",
     "CL_DV_RF_family_care": "Aile Bakımı",
-    "CL_DV_RF_family_care_tips": "İlerleyen dönemlerde buzdolabının önünde birileri aktif olabilir."
+    "CL_DV_RF_family_care_tips": "İlerleyen dönemlerde buzdolabının önünde birileri aktif olabilir.",
+    "CL_CF_AS_diagnosing": "Cihaz kendi kendini teşhis ediyor",
+    "CL_DV_RF_settings_and_support": "Ayarlar ve Destek",
+    "CL_DV_RF_durafresh_temperature_tips": "DuraFresh soğutma sistemi yiyecekleri daha uzun süre taze tutar. Vitaminler ve mineraller, lezzet ve yapı gibi daha uzun süre korunur.",
+    "CL_CF_CO_urgent": "Acil",
+    "CL_DV_RF_auto_eco_mode": "Otomatik ECO modu",
+    "CL_DV_RF_auto_eco_desc": "Otomatik ECO modunu aktif hale getirdiğinizde, cihazınız 3 gün boyunca herhangi bir işlem yapılmadığında otomatik olarak ECO moduna geçecektir.",
+    "CL_CF_CO_do_not_unpair": "Eşleştirmeyi kaldırmayın",
+    "CL_CF_CO_unpair_confirm_tips": "Cihaz eşleşmesini kaldırmak istediğinizden emin misiniz?",
+    "CL_CF_CO_reset_to_default": "Varsayılana sıfırla",
+    "CL_CF_CO_reset_to_default_tips": "Tüm ayarlar varsayılan değerlerine döndürülecektir.",
+    "CL_DV_OV_bio24_modes_desc": "Fırınınızdaki çeşitli ısıtma sistemleri en iyi pişirme sonuçlarını almanızı sağlar. Yemeğiniz için hangi ısıtma yönteminin en uygun olduğunu öğrenin.",
+    "CL_DV_OV_heater_systems": "Isıtıcı sistemleri",
+    "CL_DV_OV_heater_system_desc": "Isıtıcı sistemini seçerek ilgili fırın sistemlerini görebilirsiniz.",
+    "setting_screen_share": "Ekran Paylaşımı",
+    "CL_DV_RF_ambient_sensor": "Ortam sensörü",
+    "CL_DV_RF_ambient_sensor_desc": "Buzdolabının ışıkları odadaki ışık miktarına göre otomatik olarak ayarlanır. Ortam sensörü aktif olduğunda, manuel olarak ayarlanan değerleri geçersiz kılar.",
+    "CL_DV_RF_brightness_desc": "Buzdolabı ışıklarının parlaklığını ayarlayın.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Buzdolabınızın alarm sesinin seviyesini ayarlayın.",
+    "CL_DV_WM_offline_tips": "Cihazınız çevrimdışıyken bazı işlevler kullanılamaz. Tekrar bağlanmayı deneyin.",
+    "CL_DV_RF_key_sound_setting_tips": "Buzdolabınızın tuşlarına bastığınızda ses seviyesini ayarlayın.",
+    "CL_DV_DW_odorcontrol_desp": "Bu, program listenizdeki koku kontrol programını etkinleştirir/devre dışı bırakır. Koku kontrolü, bulaşık makinesinde bırakılan kirli bulaşıklardan kaynaklanan kötü kokuyu önler. Etkinleştirildiğinde, bulaşık makinesinin fanı 72 saatlik bir süre boyunca düzenli aralıklarla etkinleştirilir. Not: Koku kontrolünü etkinleştirmek için program listesinden programı seçmeniz gerekir. Yalnızca burada etkinleştirmek koku kontrolünü çalıştırmaz.",
+    "CL_DV_OV_bio24_hot_air_desc": "Yemek, fırının arkasından gelen sıcak hava ile ısıtılır. Bu fonksiyon eşit ısıtmadan yararlanır ve bir veya birden fazla seviyede pişirme için idealdir.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Yemek, optimize edilmiş ısıtma sistemiyle ısıtılır, böylece işlem sırasında daha az enerji kullanılır. Bu fonksiyonla, pişirme birkaç dakika daha fazla zaman alır.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Yemek, fırın boşluğunun üst ve alt kısmındaki ısıtma elemanları tarafından ısıtılır. Bu fonksiyon geleneksel pişirme ve kızartma için uygundur. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Yemek, fırının arkasından gelen sıcak hava ile ısıtılır. Bu fonksiyon eşit ısıtmayı kullanır ve bir veya birden fazla seviyede pişirme için idealdir. Özel bir havalandırma sistemi ile hava kuru tutulur ve iç kısımda eşit pişirme sağlarken çıtır çıtır bir dış yüzey elde etmek için mükemmel koşullar yaratılır.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Yemek, fırın boşluğunun üst ve alt kısmındaki ısıtma elemanları tarafından ısıtılır. Bu fonksiyon, üstten daha fazla ısı gerektiren yemekler için idealdir.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Yemek, fırın boşluğunun üst ve alt kısmındaki ısıtma elemanları tarafından ısıtılır. Bu fonksiyon, alttan daha fazla ısı gerektiren yemekler için idealdir.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Yemek, üst ve alt ısıtma elemanları tarafından ısıtılır ve ısı fan tarafından eşit şekilde dağıtılır. Yemeklerin tek bir seviyede eşit şekilde pişirilmesi ve sufle hazırlanması için.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Yemek sıcak hava ve alt ısı ile ısıtılır. Hızlı pişen ve çıtır çıtır bir dokuya sahip yemekler istediğimizde tek katlı pişirme için idealdir."
 }
