--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -3415,7 +3415,6 @@
     "use_humidity": "Використовуйте коробку для регулювання вологості",
     "same_day": "В той же день",
     "w_temp_set": "Яку температуру встановити?",
-    "asko": "АСКО",
     "eco_meter": "Еколічильник",
     "asko_eco_meter_desc": "## — це корисний інтелектуальний індикатор для визначення вашого впливу на навколишнє середовище на основі вибраної програми та додаткових опцій, коли йдеться про споживання енергії, води та миючих засобів.",
     "wm86_autodose_desc": "Замість того, щоб боротися, дозвольте пральній машині відміряти правильну дозу миючого засобу. Наші пральні машини з системою автоматичного дозування вимірюють миючий засіб залежно від завантаження білизни, рівня забруднення, жорсткості води, типу програми та температури. Завжди ідеальне дозування і жодного передозування. Тут ви можете налаштувати параметри за замовчуванням для автоматичної дози.",
@@ -4529,5 +4528,34 @@
     "CL_DV_WM_maximum_rpm": "Максимальна кількість обертів",
     "CL_CF_CS_connect_to_wifi": "Виконайте такі кроки, щоб підключити пристрій до Wi-Fi. Радимо вимкнути мережеві дані на смартфоні.",
     "CL_DV_RF_family_care": "Сімейний догляд",
-    "CL_DV_RF_family_care_tips": "У наступні періоди хтось може бути активним перед холодильником."
+    "CL_DV_RF_family_care_tips": "У наступні періоди хтось може бути активним перед холодильником.",
+    "CL_CF_AS_diagnosing": "Прилад самодіагностується",
+    "CL_DV_RF_settings_and_support": "Налаштування та підтримка",
+    "CL_DV_RF_durafresh_temperature_tips": "Холодильна система DuraFresh зберігає продукти свіжими довше. Вітаміни та мінерали зберігаються довше, а також смак і структура.",
+    "CL_CF_CO_urgent": "Терміново",
+    "CL_DV_RF_auto_eco_mode": "Автоматичний режим ECO",
+    "CL_DV_RF_auto_eco_desc": "Якщо активувати автоматичний режим ECO, ваш пристрій автоматично перейде в режим ECO через 3 дні бездіяльності.",
+    "CL_CF_CO_do_not_unpair": "Не розпарюйтеся",
+    "CL_CF_CO_unpair_confirm_tips": "Ви точно хочете скасувати з’єднання?",
+    "CL_CF_CO_reset_to_default": "Скинути до замовчування",
+    "CL_CF_CO_reset_to_default_tips": "Для всіх параметрів буде встановлено значення за замовчуванням.",
+    "CL_DV_OV_bio24_modes_desc": "Різноманітні системи нагрівання у вашій духовці забезпечують оптимальні результати приготування. Дізнайтеся, який спосіб нагрівання найкраще підходить для вашої страви.",
+    "CL_DV_OV_heater_systems": "Системи опалення",
+    "CL_DV_OV_heater_system_desc": "Виберіть систему нагрівання, щоб побачити відповідні системи духовки.",
+    "setting_screen_share": "Поділитися екраном",
+    "CL_DV_RF_ambient_sensor": "Датчик навколишнього середовища",
+    "CL_DV_RF_ambient_sensor_desc": "Освітлення холодильника автоматично підлаштовується під кількість світла в кімнаті. Коли датчик навколишнього середовища активний, він перекриває встановлені вручну значення.",
+    "CL_DV_RF_brightness_desc": "Налаштуйте яскравість підсвічування холодильника.",
+    "CL_DV_RF_alarm_sound_setting_tips": "Встановіть гучність звукового сигналу вашого холодильника.",
+    "CL_DV_WM_offline_tips": "Деякі функції не можна використовувати, коли ваш пристрій у режимі офлайн. Спробуйте знову підключитися.",
+    "CL_DV_RF_key_sound_setting_tips": "Встановіть гучність для натискання клавіш на вашому холодильнику.",
+    "CL_DV_DW_odorcontrol_desp": "Це дозволить увімкнути/вимкнути програму контролю запаху у вашому списку програм. Контроль запаху запобігає неприємному запаху від брудного посуду, залишеного в посудомийній машині. Коли ввімкнено, вентилятор посудомийної машини вмикається через регулярні проміжки часу протягом 72 годин. Примітка: Щоб увімкнути контроль запаху, необхідно вибрати програму зі списку програм. Лише ввімкнення цього параметра тут не запускатиме контроль запаху.",
+    "CL_DV_OV_bio24_hot_air_desc": "Блюдо нагрівається гарячим повітрям, що подається із задньої частини духовки. Ця функція забезпечує рівномірний нагрів і ідеально підходить для випічки на одному або кількох рівнях.",
+    "CL_DV_OV_bio24_eco_hot_air_desc": "Страва нагрівається за допомогою оптимізованої системи нагріву, завдяки чому під час процесу витрачається менше енергії. З цією функцією приготування вимагає кількох додаткових хвилин.",
+    "CL_DV_OV_bio24_top_bottom_heat_desc": "Блюдо нагрівається нагрівальними елементами у верхній і нижній частині камери духовки. Ця функція підходить для традиційного випікання та смаження. ",
+    "CL_DV_OV_bio24_dry_hot_air_desc": "Блюдо нагрівається гарячим повітрям, що подається із задньої частини духовки. Ця функція забезпечує рівномірний нагрів і ідеально підходить для випікання на одному або кількох рівнях. Завдяки спеціальній системі вентиляції повітря залишається сухим, створюючи ідеальні умови для досягнення хрусткої консистенції зовні, забезпечуючи рівномірне приготування їжі всередині.",
+    "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Страва нагрівається нагрівальними елементами у верхній і нижній частині камери духовки. Ця функція ідеально підходить для страв, які вимагають більше тепла зверху.",
+    "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Страва нагрівається нагрівальними елементами у верхній і нижній частині камери духовки. Ця функція ідеально підходить для посуду, якому потрібно більше тепла знизу.",
+    "CL_DV_OV_bio24_top_bottom_fan_desc": "Страва нагрівається верхнім і нижнім нагрівальними елементами, при цьому тепло рівномірно розподіляється вентилятором. Для рівномірного пропікання страв на одному рівні та приготування суфле.",
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Посуд нагрівається гарячим повітрям і нижнім жаром. Ідеально підходить для випікання на одному рівні, коли ми хочемо, щоб страви готувалися швидко та мали хрустку структуру."
 }
